--- a/laxyam/padyam/kAlidAsaH/kumArasambhavam/sarva-prastutiH/01.md
+++ b/laxyam/padyam/kAlidAsaH/kumArasambhavam/sarva-prastutiH/01.md
@@ -282,7 +282,7 @@ title = "०१"
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
-{{< figure src="../images/bioluminescent-fungii.jpg" title="" class="thumbnail">}}
+{{< figure src="../../images/bioluminescent-fungii.jpg" title="" class="thumbnail">}}
 
 वने-चराणां वनिता-सखानां  
 दरी-गृहोत्सङ्ग+++(=अभ्यन्तर)+++-निषक्त-भासः।  
@@ -807,6 +807,8 @@ title = "०१"
 तामिति ॥ स्थिरः स्थेयानुपदेशः प्राग्भवीयो यस्यास्तादृशीम् । मेधामिनोमित्यर्थः । तां पार्वतीमुपदेशकाले प्राक्तनजन्मविद्याः । पूर्वजन्माभ्यस्तविद्या इत्यर्थः । शरदि गङ्गां हंसमाला इव नक्तं रात्रौ महौषधिं तृणविशेषमात्मभासः स्वदीप्तय इव प्रपेदिरे । उपमानसामर्थ्यादुपदेशमन्तरेणैवेति गम्यते ॥ 1. 30 ॥
 </details>
 
+## यौवनम्
+
 <div class="audioEmbed" caption="वेदभूमिपाठः" src="https://archive.org/download/kuMArasambhava-mUlam-vedabhoomi.org/KumaraSambhava-Sarga01-31-43.mp3"></div>
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -957,7 +959,7 @@ title = "०१"
 नागेन्द्रेति । नागेन्द्राणामैरावतादीनां हस्ताः करास्त्वचि चर्मणि कर्कशत्वात्कदलीविशेषा रामरम्भादय एकान्तशएत्यान्नियतशैत्याद्धेतोः लोके परिणाहि वैपुल्ययुक्तम् । 'परिणाहो विशालता' इत्यमरः । रूपं लब्ध्वापि । अपिशब्दात्करिकदलीमात्रस्य तादृक्परिणाहो नास्तीति भावः । तस्या ऊर्वोस्तदूर्वोरुपमानबाह्या जाता उपमानक्रियानर्हा बभृवुः । तदूर्वोन कार्कश्यं नाप्येकान्तशैत्यमिति भावः ॥ 1. 36 ॥
 </details>
 
-{{< figure src="../images/kAnchI-guNam_sAnubandham.jpg" title="" class="thumbnail">}}
+{{< figure src="../../images/kAnchI-guNam_sAnubandham.jpg" title="" class="thumbnail">}}
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -1061,13 +1063,19 @@ title = "०१"
 <details><summary>मल्लिनाथः</summary>
 
 अन्योन्येति । अन्योन्यं परस्परम् । 'कर्मव्यतिहारे सर्वनाम्ना द्वे वाच्ये' इति द्विरुक्तिः । 'समासवच्च बहुलम्' इति बहुलवचनादसमासपक्षेऽपि पूर्वपदस्थस्य सुपः सुर्वक्तव्यः । उत्पीडयदुपरुन्धत्पाण्डु गौरमुत्पलाक्ष्याः स्तनद्वयं तथा तेन प्रकारेण प्रवृद्धम् । कर्तरि क्तः । श्याममुखस्य कृष्णच्चुकस्येति क्वरुपवर्णनं तस्य स्तनद्वयस्य मध्ये यथा येन प्रकारेण मृणालसूत्रान्तरं बिसतन्तुमात्रावकाशोऽप्यलभ्यं लब्धुमशक्यम् । 'अन्तरमवकाशावधिपरिधानान्तर्धिभेदतादर्थ्ये' इत्यमरः । अत्र संबन्धेऽसंबन्धरुपातिशयोक्त्यलंकारः । कुचयोः पीवरत्वातिशयार्थमवकाशसंबन्धऽप्यसंबन्धाभिधानादिति ॥ 1. 40॥
+
+लोके सुकुमारत्वम् एव कुसुमास्त्रस्य साधकत्वमिति स्थिते सत्याह --
 </details>
+
+
+{{< figure src="../../images/shirISha.jpg" title="" class="thumbnail">}}
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
-लोके सुकुमारत्वमेव कुसुमास्त्रस्य साधकत्वमिति स्थिते सत्याह --  
-शिरीषपुष्पाधिकसौकुमार्यौ बाहू तदीयाविति मे वितर्कः ।  
-पराजितेनापि कृतौ हरस्य यौ कण्ठपाशौ मकरध्वजेन ॥ 1. 41 ॥   
+शिरीष-पुष्पाधिक-सौकुमार्यौ  
+**बाहू** तदीयाव् इति मे वितर्कः ।  
+पराजितेनापि **कृतौ** हरस्य  
+यौ **कण्ठ-पाशौ** मकर-ध्वजेन ॥ 1. 41 ॥ +++(4)+++   
 </details>
 
 <details><summary>मूलम्</summary>
@@ -1089,8 +1097,10 @@ title = "०१"
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
-कण्ठस्य तस्याः स्तनबन्धुरस्य मुक्ताकलापस्य च निस्तलस्य ।  
-अन्योन्यशोभाजननाद्वभूव साधारणो भूषणभूष्यभावः ॥ 1. 42 ॥   
+**कण्ठस्य** तस्याः स्तन-बन्धुरस्य  
+**मुक्ता-कलापस्य** च निस्तलस्य+++(=वर्तुलस्य)+++ ।  
+अन्योन्य-शोभा-जननाद् बभूव  
+साधारणो+++(=समानो)+++ **भूषण-भूष्यभावः** ॥ 1. 42 ॥   
 </details>
 
 <details><summary>मूलम्</summary>
@@ -1106,26 +1116,37 @@ title = "०१"
 
 <details><summary>मल्लिनाथः</summary>
 
-कण्ठस्येति ॥ स्तनाभ्यां बन्धुरस्योन्नतस्य तस्याः पार्वत्याः कण्ठस्य गलस्य निस्तलस्य वर्तुलस्य मुक्ताकलापस्य मुक्ताभूषणस्य च । 'वर्तुलं निस्तलं बृत्तं बन्धुरं तून्नतानतम्' । 'कलापो भूषणे बर्हे तूणीरे संहतावपि' इति चामरः । अन्योन्यशोभाजननाद् भूषणभूष्यभावोऽलंकारालंकार्यभावः साधारणः समानो बभूव । उभावप्यन्योन्यस्य भूष्यौ भूषणे च बभूवतुरित्यर्थः । अत्र कण्ठमुक्ताकलापयोः सोभक्रियाद्वारेणान्योन्यभूषाजनकत्वादन्योत्यालंकारः । तदुक्तम्- 'परस्परं क्रियाजननमन्योन्यम्'इति ॥ 1. 42 ॥
+कण्ठस्येति ॥ स्तनाभ्यां बन्धुरस्योन्नतस्य तस्याः पार्वत्याः **कण्ठस्य** गलस्य **निस्तलस्य** वर्तुलस्य **मुक्ताकलापस्य** मुक्ताभूषणस्य च । 'वर्तुलं निस्तलं बृत्तं बन्धुरं तून्नतानतम्' । 'कलापो भूषणे बर्हे तूणीरे संहतावपि' इति चामरः । **अन्योन्य-शोभा-जननाद् भूषण-भूष्यभावो** ऽलंकारालंकार्यभावः **साधारणः** समानो बभूव ।  
+उभावप्यन्योन्यस्य भूष्यौ भूषणे च बभूवतुरित्यर्थः । अत्र कण्ठमुक्ताकलापयोः सोभक्रियाद्वारेणान्योन्यभूषाजनकत्वादन्योत्यालंकारः । तदुक्तम्- 'परस्परं क्रियाजननमन्योन्यम्'इति ॥ 1. 42 ॥
+
+इदानीं पार्वतीवदनं चन्द्रकमलसदृशमित्येतदेव वाचोभङ्ग्याह-
 </details>
+
+<div class="audioEmbed" caption="वेदभूमिपाठः" src="https://archive.org/download/kuMArasambhava-mUlam-vedabhoomi.org/KumaraSambhava-Sarga01-44-53.mp3"></div>
+
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
-इदानीं पार्वतीवदनं चन्द्रकमलसदृशमित्येतदेव वाचोभङ्ग्याह-  
-चन्द्रं गता पद्मगुणान्न भुङ्क्ते पद्माश्रिता चान्द्रमसीमभिख्याम् ।  
-उमामुखं तु प्रतिपद्य लोला द्विसंश्रयां प्रीतिमवाप लक्ष्मीः ॥ 1. 43 ॥   
+चन्द्रं गता पद्म-गुणान् **न भुङ्क्ते**  
+पद्माश्रिता चान्द्रमसीम् अभिख्याम् ।  
+**उमा-मुखं** तु **प्रतिपद्य** लोला  
+द्विसंश्रयां **प्रीतिम् अवाप लक्ष्मीः** ॥ 1. 43 ॥+++(5)+++   
 </details>
 
 <details><summary>मूलम्</summary>
 
-इदानीं पार्वतीवदनं चन्द्रकमलसदृशमित्येतदेव वाचोभङ्ग्याह-  
 चन्द्रं गता पद्मगुणान्न भुङ्क्ते पद्माश्रिता चान्द्रमसीमभिख्याम् ।  
 उमामुखं तु प्रतिपद्य लोला द्विसंश्रयां प्रीतिमवाप लक्ष्मीः ॥ 1. 43 ॥   
 </details>
 
 <details><summary>अन्वयः</summary>
 
-लोला लक्ष्मीः चन्द्रं गता (सती) पद्मगुणान् न भुङ्त्ते, पद्माश्रिता (सती) चान्द्रमसीम् अभिख्यां न भुङ्क्ते, उमामुखं तु प्रतिपद्य द्विसंश्रयां प्रीतिम् अवाप ।  
+लोला लक्ष्मीः चन्द्रं गता (सती)  
+पद्मगुणान् न भुङ्त्ते,  
+पद्माश्रिता (सती)  
+चान्द्रमसीम् अभिख्यां न भुङ्क्ते,  
+उमामुखं तु प्रतिपद्य  
+द्विसंश्रयां प्रीतिम् अवाप ।  
 </details>
 
 <details><summary>मल्लिनाथः</summary>
@@ -1133,9 +1154,19 @@ title = "०१"
 चन्द्रमिति ॥ लोला चपला । परिभ्रमणशीलेत्यर्थः । लक्ष्मीः कान्त्यभिमानिनी देवता चन्द्रं गता प्रात्पा सती पद्मगुणान्सौगन्ध्यादीन्न भुङ्क्ते नानुभवति । पद्माश्रिता सती चन्द्रमस इमां चान्द्रमसीमभिख्यां शोभाम् । 'अभिख्या नामशोभयोः' इत्यमरः । अमृतवदानन्दिनीं न भुङ्क्ते । उमामुखं प्रतिपद्य तु द्वे चन्द्रपद्मे संश्रयः कारणं यस्यास्तां द्विसंश्रयां प्रीतिमानन्दमवाप । तत्रोभयगुणसंभवादिति भावः । अत्रोपमानभुतचन्द्रपद्मापेक्षयोपमेयस्योमामुखस्याधिकगुणवत्त्वोक्त्या व्यतिरेकालंकारः । तदुक्तम्- 'भेदप्राधान्येनोपमानादुपमेयस्याधिक्ये विपर्यये वा व्यतिरेकः' इति ॥ 1. 43 ॥
 </details>
 
-पुष्पं प्रवालोपहितं यदि स्यान्मुक्ताफलं वा स्फुटविद्रुमस्थम् ।  
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
-ततोऽनुकुर्याद्विशदस्य तस्या स्ताम्रौष्ठपर्यस्तरुचः स्मितस्य ॥ 1. 44 ॥  
+पुष्पं प्रवालोपहितं **यदि स्यान्**,  
+मुक्ता-फलं वा स्फुट-विद्रुम-स्थम् ।  
+ततो **ऽनुकुर्याद्** विशदस्य तस्यास्  
+ताम्रौष्ठ-पर्यस्त-रुचः **स्मितस्य** ॥ 1. 44 ॥+++(5)+++  
+</details>
+
+<details><summary>मूलम्</summary>
+
+पुष्पं प्रवालोपहितं यदि स्यान्मुक्ताफलं वा स्फुटविद्रुमस्थम् ।  
+ततोऽनुकुर्याद्विशदस्य तस्या स्ताम्रौष्ठपर्यस्तरुचः स्मितस्य ॥ 1. 44 ॥
+</details>
 
 <details><summary>अन्वयः</summary>
 
@@ -1144,29 +1175,36 @@ title = "०१"
 
 <details><summary>मल्लिनाथः</summary>
 
-- पुष्पमिति ॥ पुष्पं पुणडरीकादिकं प्रवाले बालपल्लव उपहितं निहितं स्याद्यदि । 'प्रवालो वल्लकीदण्डे विद्रुमे बालपल्लवे' इति विश्वः । मुक्ताफलं वा स्फुटे निर्मले वा विद्रुमे तिष्ठतीति स्फुटविद्रुमस्थं स्यद्यदि ततस्तर्हि विशदस्य शुभ्रस्य ताम्रे अरुणे ओष्ठे पर्यस्ता प्रसृता रुक्कान्तिर्यस्य तथोक्तस्य तस्याः पार्वत्याः स्मितस्यानुकुर्यात् । स्मितमनुकुर्यादित्यर्थः । अत्र 'माषाणामश्मूयात्' इति वत्सम्बन्धमात्रविवक्षया षष्ठी । अत्र पुष्पप्रवालयोर्मुक्ताविद्रुमयोश्चासंबन्धेऽपि संबन्धोक्त्यातिशयोक्तिः । 'सा च संभावना' इत्यलंकारसर्वस्वकारः । विशेषस्तु पुष्पमुक्ताफलयोरुपमानयोः प्रकृतोत्कर्षार्थमुपमेयताकल्पनात्प्रतीपालंकारः । तदुक्तम्-- 'उपमानस्याक्षेप उपमेयताकल्पनं वा प्रतीपः' इति लक्षणात् । स च पूर्वोक्तातिशयोक्त्यनुप्राणित इति ॥ 1. 44 ॥
+पुष्पमिति ॥ पुष्पं पुणडरीकादिकं प्रवाले बालपल्लव उपहितं निहितं स्याद्यदि । 'प्रवालो वल्लकीदण्डे विद्रुमे बालपल्लवे' इति विश्वः । मुक्ताफलं वा स्फुटे निर्मले वा विद्रुमे तिष्ठतीति स्फुटविद्रुमस्थं स्यद्यदि ततस्तर्हि विशदस्य शुभ्रस्य ताम्रे अरुणे ओष्ठे पर्यस्ता प्रसृता रुक्कान्तिर्यस्य तथोक्तस्य तस्याः पार्वत्याः स्मितस्यानुकुर्यात् । स्मितमनुकुर्यादित्यर्थः । अत्र 'माषाणामश्मूयात्' इति वत्सम्बन्धमात्रविवक्षया षष्ठी । अत्र पुष्पप्रवालयोर्मुक्ताविद्रुमयोश्चासंबन्धेऽपि संबन्धोक्त्यातिशयोक्तिः । 'सा च संभावना' इत्यलंकारसर्वस्वकारः । विशेषस्तु पुष्पमुक्ताफलयोरुपमानयोः प्रकृतोत्कर्षार्थमुपमेयताकल्पनात्प्रतीपालंकारः । तदुक्तम्-- 'उपमानस्याक्षेप उपमेयताकल्पनं वा प्रतीपः' इति लक्षणात् । स च पूर्वोक्तातिशयोक्त्यनुप्राणित इति ॥ 1. 44 ॥
 </details>
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
-स्वरेण तस्याममृतस्त्रतेव प्रजल्पितायामभिजातवाचि ।  
-अप्यन्यपुष्टा प्रतिकूलशब्दा श्रोतुर्वितन्त्रीरिव ताड्यमाना ॥ 1. 45 ॥   
+स्वरेण तस्याम् अमृत-स्रुतेव  
+प्रजल्पितायाम् अभिजात-वाचि ।  
+अप्य् अन्य-पुष्टा प्रति-कूल-शब्दा -  
+श्रोतुर् वि+++(षम)+++-तन्त्रीर् इव ताड्यमाना ॥ 1. 45 ॥+++(5)+++   
 </details>
 
 <details><summary>मूलम्</summary>
 
-स्वरेण तस्याममृतस्त्रतेव प्रजल्पितायामभिजातवाचि ।  
+स्वरेण तस्याममृतस्रुतेव प्रजल्पितायामभिजातवाचि ।  
 अप्यन्यपुष्टा प्रतिकूलशब्दा श्रोतुर्वितन्त्रीरिव ताड्यमाना ॥ 1. 45 ॥   
 </details>
 
 <details><summary>अन्वयः</summary>
 
-अभिजातवाचि तस्याम् अमृतस्त्रुता इव स्वरेण प्रजल्पितायां सत्याम् अन्यपुष्टा अपि ताड्यमाना वितन्त्री इव श्रोतुः प्रतिकूलशब्दाः ।  
+अभिजात-वाचि तस्याम्  
+अमृतस्त्रुता इव स्वरेण प्रजल्पितायां सत्याम्  
+अन्यपुष्टा अपि ताड्यमाना वितन्त्री इव  
+श्रोतुः प्रतिकूलशब्दाः ।  
 </details>
 
 <details><summary>मल्लिनाथः</summary>
 
-- स्वरेणेति । अभिजातवाचि मधुरभाषिण्यां तस्यां पार्वत्याममृतस्त्रुतामृतस्त्राविणेव । क्विप् । स्वरेण नादेन प्रजल्पितायामालपन्त्याम् । कर्त्तरि क्तः । अन्यैः काकादिभिः पुष्टान्यपुष्टा कोकिलापि । मुख्यया वृत्या जातिवचनत्वभावान्ङीबभावः । ताह्यमाना वाद्यमाना विषमबद्धा तन्त्रार्वितन्त्रीरिव अवितॄस्तृतन्त्रिभ्यः- ईः ' इति तन्त्रिधातोरौणादिक ईप्रत्ययः । ङीबभावान्न 'हल्ङ्याब्भ्यः-' इति सुलोपः । तदुक्तम्- अवोलक्ष्मीतरीतन्त्रीधीह्रोश्रीणामुणादिषु । स्त्रीलिङ्गानाममीषां तु न सुलोपः कदाचन ॥ एते ङीबन्ता न भवन्तीत्यर्थः । श्रोतुर्जनस्य प्रतिकूलशब्दाकर्णकठोरनादा भवतीति शेषः ॥ 1. 44 ॥
+स्वरेणेति । **अभिजातवाचि** मधुरभाषिण्यां **तस्यां** पार्वत्याम् **अमृतस्रुता** ऽमृतस्राविणेव । क्विप् ।  
+**स्वरेण** नादेन प्रजल्पितायामालपन्त्याम् । कर्त्तरि क्तः । अन्यैः काकादिभिः पुष्टा **ऽन्यपुष्टा** कोकिलापि । मुख्यया वृत्या जातिवचनत्व-भावान् ङीबभावः । **ताड्यमाना** वाद्यमाना विषमबद्धा तन्त्रीर् **वितन्त्रीर् इव** अवितॄस्तृतन्त्रिभ्यः- ईः ' इति तन्त्रिधातोरौणादिक ईप्रत्ययः । ङीबभावान्न 'हल्ङ्याब्भ्यः-' इति सुलोपः । तदुक्तम्-  
+अवोलक्ष्मीतरीतन्त्रीधीह्रोश्रीणामुणादिषु । स्त्रीलिङ्गानाममीषां तु न सुलोपः कदाचन ॥ एते ङीबन्ता न भवन्तीत्यर्थः । श्रोतुर्जनस्य प्रतिकूलशब्दाकर्णकठोरनादा भवतीति शेषः ॥ 1. 44 ॥
 </details>
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -1212,7 +1250,7 @@ title = "०१"
 
 <details><summary>मल्लिनाथः</summary>
 
-- तस्या इति । आयतलेखयोर्दिर्घरेखयोस्तस्याः पार्वत्या भ्रुवोः संबन्धिनी शलाकयाञ्जनेन निर्मितैव स्थिता या कान्तिर्लिलाचतुरां विलाससुभगां तां कान्तिं वीक्ष्यानङ्गः स्वचापसौन्दर्येण यो मदस्तं मुमोच । इह सौन्दर्यातिशयोक्तिः ॥ 1. 47 ॥
+तस्या इति । आयतलेखयोर्दिर्घरेखयोस्तस्याः पार्वत्या भ्रुवोः संबन्धिनी शलाकयाञ्जनेन निर्मितैव स्थिता या कान्तिर्लिलाचतुरां विलाससुभगां तां कान्तिं वीक्ष्यानङ्गः स्वचापसौन्दर्येण यो मदस्तं मुमोच । इह सौन्दर्यातिशयोक्तिः ॥ 1. 47 ॥
 </details>
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -1234,7 +1272,7 @@ title = "०१"
 
 <details><summary>मल्लिनाथः</summary>
 
-- लज्जेति । तिरश्चां तिर्यग्जातीनां चेतसि लज्जा स्याद्यदि । संशयाभावोऽसंशयम् । सन्देहो नास्तीत्यर्थः । पर्वतराजपुत्र्याः । 'शार्ङ्गरतवाद्यञो ङीन्'इति ङीन् । तं प्रसिद्धं केशपाशं केशकलापम् । 'पाशः पक्षश्च हस्तश्च कलापार्थाः कचात्परे' इत्यमरः । प्रसमीक्ष्य दृष्ट्वा चमर्यो मृगीविशेषाः बालाः प्रिया यासामिति विग्रहे बालप्रियास्तासां भावो बालप्रियत्वम् । प्रियबालत्वमित्यर्थः । आहिताग्न्यादिपाठाद्वा परनिपातः । 'त्वतलोर्गुणवचनस्य' इति पुंबद्भावः । शिथिलं कुर्यः । निर्लज्जत्वान्न शिथिलयन्तीत्यर्थः । अत एवात्र निर्लज्जत्वकरणहेतोराद्यपादे वाक्यार्थत्वेनोक्त्या काव्यलिङ्गाख्योऽलङ्कारः । तदुक्तम्-- 'हेतोर्वाक्यपदार्थत्वे काव्यलिङ्गमुदाहृतम्' इति ॥ 1. 48 ॥
+लज्जेति । तिरश्चां तिर्यग्जातीनां चेतसि लज्जा स्याद्यदि । संशयाभावोऽसंशयम् । सन्देहो नास्तीत्यर्थः । पर्वतराजपुत्र्याः । 'शार्ङ्गरतवाद्यञो ङीन्'इति ङीन् । तं प्रसिद्धं केशपाशं केशकलापम् । 'पाशः पक्षश्च हस्तश्च कलापार्थाः कचात्परे' इत्यमरः । प्रसमीक्ष्य दृष्ट्वा चमर्यो मृगीविशेषाः बालाः प्रिया यासामिति विग्रहे बालप्रियास्तासां भावो बालप्रियत्वम् । प्रियबालत्वमित्यर्थः । आहिताग्न्यादिपाठाद्वा परनिपातः । 'त्वतलोर्गुणवचनस्य' इति पुंबद्भावः । शिथिलं कुर्यः । निर्लज्जत्वान्न शिथिलयन्तीत्यर्थः । अत एवात्र निर्लज्जत्वकरणहेतोराद्यपादे वाक्यार्थत्वेनोक्त्या काव्यलिङ्गाख्योऽलङ्कारः । तदुक्तम्-- 'हेतोर्वाक्यपदार्थत्वे काव्यलिङ्गमुदाहृतम्' इति ॥ 1. 48 ॥
 </details>
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -1278,7 +1316,7 @@ title = "०१"
 
 <details><summary>मल्लिनाथः</summary>
 
-- तामिति । कामेनेच्छया चरतीति कामचरो नारदः । कदाचित्पितुर्हिमवतः समीपे कन्यां तां पार्वतीं प्रेक्ष्य किल प्रेम्णा न त्वन्यथा हरस्य शिवस्यार्ध हरतीत्यर्धहरा । 'हरतेरनुद्यमनेऽच्' हत्यच्प्रत्ययः । शरीरास्यार्धहराम् शरीरार्धहराम् । कुलधुरन्धरादिवदवयवद्वारा समुदायविशेषकत्वात्समासः । अन्यथा त्वर्धस्य समप्रविभागावचनत्वादशरीरेति स्यात् । एकवधूमसपत्नीकां भार्याम् । 'पूर्वकाल--' इत्यादिना समासः । भवित्रीं भाविनीं समादिदेश । हरस्यार्धाङ्गहारिण्येकपत्नी भविष्यतीत्यादिष्टवावित्यर्थः ॥ 1. 50 ॥
+तामिति । कामेनेच्छया चरतीति कामचरो नारदः । कदाचित्पितुर्हिमवतः समीपे कन्यां तां पार्वतीं प्रेक्ष्य किल प्रेम्णा न त्वन्यथा हरस्य शिवस्यार्ध हरतीत्यर्धहरा । 'हरतेरनुद्यमनेऽच्' हत्यच्प्रत्ययः । शरीरास्यार्धहराम् शरीरार्धहराम् । कुलधुरन्धरादिवदवयवद्वारा समुदायविशेषकत्वात्समासः । अन्यथा त्वर्धस्य समप्रविभागावचनत्वादशरीरेति स्यात् । एकवधूमसपत्नीकां भार्याम् । 'पूर्वकाल--' इत्यादिना समासः । भवित्रीं भाविनीं समादिदेश । हरस्यार्धाङ्गहारिण्येकपत्नी भविष्यतीत्यादिष्टवावित्यर्थः ॥ 1. 50 ॥
 </details>
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -1300,7 +1338,7 @@ title = "०१"
 
 <details><summary>मल्लिनाथः</summary>
 
-- गुरुरिति । गुरुः पिता । 'गुरु गीःपतिपित्राद्यौ' इत्यमरः । अतो नारदवचनाद्धेतोरस्याः पार्वत्याः प्रगल्भे वयस्यपि यौवने सत्यपि निवृत्तोऽन्यस्मिन्वरे जामातर्यभिलाषो यस्य स तथोक्तः सन् । 'वरौ ना रुपजामात्रोः' इति वैजयन्ती । तस्थौ । वरान्तरं नान्विष्टवानित्यर्थः । ननु कुतोऽसौ निबंन्ध इत्यत आह-- ऋत इति । तथाहि मन्त्रैः पूतं संस्कृतं हूयत इति हव्यमाज्यादिकं कृशानोः पावकादृते कृशानुं विना 'अन्यारादितरे--' इत्यादिना पञ्चमी । अपराणि तेजांसि सुवार्णादीनि नार्हन्ति । न भजन्तीत्यर्थः । ईश्वरादन्यस्य तद्योग्यस्याभावादुपेक्षेति भावः ॥ 1. 51 ॥
+गुरुरिति । गुरुः पिता । 'गुरु गीःपतिपित्राद्यौ' इत्यमरः । अतो नारदवचनाद्धेतोरस्याः पार्वत्याः प्रगल्भे वयस्यपि यौवने सत्यपि निवृत्तोऽन्यस्मिन्वरे जामातर्यभिलाषो यस्य स तथोक्तः सन् । 'वरौ ना रुपजामात्रोः' इति वैजयन्ती । तस्थौ । वरान्तरं नान्विष्टवानित्यर्थः । ननु कुतोऽसौ निबंन्ध इत्यत आह-- ऋत इति । तथाहि मन्त्रैः पूतं संस्कृतं हूयत इति हव्यमाज्यादिकं कृशानोः पावकादृते कृशानुं विना 'अन्यारादितरे--' इत्यादिना पञ्चमी । अपराणि तेजांसि सुवार्णादीनि नार्हन्ति । न भजन्तीत्यर्थः । ईश्वरादन्यस्य तद्योग्यस्याभावादुपेक्षेति भावः ॥ 1. 51 ॥
 </details>
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -1324,7 +1362,7 @@ title = "०१"
 
 <details><summary>मल्लिनाथः</summary>
 
-- अयाचितारमिति । अद्रिर्हिमवानयाचितारमयाचमानं देवदेवं महादेवं सुतां पार्वतीं ग्राहयितुं स्वयमाहूय परिग्राहयितुं न शशाक नोत्सेहे । तथाहि साधुः सज्जनः । 'साधुर्वार्धुषिके चारौ सज्जने चाभिधेयवत्' इति विश्वः । अभ्यर्थनाभङ्गभयेन याच्ञावैफल्यभीत्येष्टेऽप्यर्थे विषये माध्यस्थ्यमौदासीन्यमवलम्बते ॥ 1. 52 ॥
+अयाचितारमिति । अद्रिर्हिमवानयाचितारमयाचमानं देवदेवं महादेवं सुतां पार्वतीं ग्राहयितुं स्वयमाहूय परिग्राहयितुं न शशाक नोत्सेहे । तथाहि साधुः सज्जनः । 'साधुर्वार्धुषिके चारौ सज्जने चाभिधेयवत्' इति विश्वः । अभ्यर्थनाभङ्गभयेन याच्ञावैफल्यभीत्येष्टेऽप्यर्थे विषये माध्यस्थ्यमौदासीन्यमवलम्बते ॥ 1. 52 ॥
 </details>
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -1348,7 +1386,7 @@ title = "०१"
 
 <details><summary>मल्लिनाथः</summary>
 
-- यदेति । शोभना दन्ता यस्याः सा सुदती । 'वयसि दन्तस्य दतृ' इति दत्रादेशः । 'उगितश्च' इति ङिप् । सा पार्वती पूर्वे जनने पूर्वस्मिञ्जन्मनि । 'पूर्वादिभ्यो नवभ्यो वा' इति स्मिन्नादेशविकल्पः । 'पूर्वज्वलने' इति पाठे पूर्वं दाक्षायणीत्वे ज्वलने योगाग्नौ । यदा यस्मिन्काले दक्षरोषाच्छरीरं देहं ससर्ज तत्याज, तदाप्रभूत्येव तदाद्येव यथा तथा पशुनां पतिः शिवो विमुक्तसङ्गस्त्यक्तविषयासङ्गः सन् । अपरिग्रहोऽपत्नीकोऽभूते । स्त्र्यंतरं न परिजग्राहेत्यर्थः 'पत्नीपरिजनादानमूलशापाः परिग्रहाः' इत्यमरः ॥ 1. 53 ॥
+यदेति । शोभना दन्ता यस्याः सा सुदती । 'वयसि दन्तस्य दतृ' इति दत्रादेशः । 'उगितश्च' इति ङिप् । सा पार्वती पूर्वे जनने पूर्वस्मिञ्जन्मनि । 'पूर्वादिभ्यो नवभ्यो वा' इति स्मिन्नादेशविकल्पः । 'पूर्वज्वलने' इति पाठे पूर्वं दाक्षायणीत्वे ज्वलने योगाग्नौ । यदा यस्मिन्काले दक्षरोषाच्छरीरं देहं ससर्ज तत्याज, तदाप्रभूत्येव तदाद्येव यथा तथा पशुनां पतिः शिवो विमुक्तसङ्गस्त्यक्तविषयासङ्गः सन् । अपरिग्रहोऽपत्नीकोऽभूते । स्त्र्यंतरं न परिजग्राहेत्यर्थः 'पत्नीपरिजनादानमूलशापाः परिग्रहाः' इत्यमरः ॥ 1. 53 ॥
 </details>
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -1370,7 +1408,7 @@ title = "०१"
 
 <details><summary>मल्लिनाथः</summary>
 
-- स इति । कत्तिवासाश्चर्माम्बरः । 'अजिनं चर्म कृत्तिः स्त्री' इत्यमरः । यतात्मा नियतचितः सः पशुपतिस्तपसे तपोर्थ गङ्गाप्रवाहेणोक्षिताः सिक्ता देवदारवो यस्मिंस्तत्तथोक्तम् । मृगनाभिगन्धि कस्तूरीगन्धवत् । कस्तूरीमृगसंचारादिति भावः । 'मृगनाभिर्मृगमदः कस्तूरी चाथ कोलकम्' इत्यमरः । क्बणन्तो गायन्तः किंन्नरा यस्मिंस्तत्तथोक्तम् । किंचित्किमपि हिमाद्रेः प्रस्थं सानुमध्युवास । कुत्रचित्प्रस्थ उवासेत्यर्थः । 'उपान्वध्याङ्वसः' इत्याधारस्य कर्मत्वम् । प्रस्थोऽस्त्री सानुमानयोः ईत्यमरः ॥ 1. 54 ॥
+स इति । कत्तिवासाश्चर्माम्बरः । 'अजिनं चर्म कृत्तिः स्त्री' इत्यमरः । यतात्मा नियतचितः सः पशुपतिस्तपसे तपोर्थ गङ्गाप्रवाहेणोक्षिताः सिक्ता देवदारवो यस्मिंस्तत्तथोक्तम् । मृगनाभिगन्धि कस्तूरीगन्धवत् । कस्तूरीमृगसंचारादिति भावः । 'मृगनाभिर्मृगमदः कस्तूरी चाथ कोलकम्' इत्यमरः । क्बणन्तो गायन्तः किंन्नरा यस्मिंस्तत्तथोक्तम् । किंचित्किमपि हिमाद्रेः प्रस्थं सानुमध्युवास । कुत्रचित्प्रस्थ उवासेत्यर्थः । 'उपान्वध्याङ्वसः' इत्याधारस्य कर्मत्वम् । प्रस्थोऽस्त्री सानुमानयोः ईत्यमरः ॥ 1. 54 ॥
 </details>
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -1392,7 +1430,7 @@ title = "०१"
 
 <details><summary>मल्लिनाथः</summary>
 
-- गणा इति ॥ गणाः प्रमथगणाः । 'गणाः प्रमथसंख्यौधाः' इति वैजयन्ती । नमेरुप्रसवावतंसाः सुरपुंनागकुसुमशेखराः । 'नमेरुः सुरपुंनागः' इति विश्वः । स्पर्शवतीः सुखस्पर्शाः । मृद्वीरित्यर्थः । प्रशंसायां मतुप् । भूर्जत्वचो भूर्जवल्कलानि दधानाः । वसाना इत्यर्थः । मनःशिलाभिर्धातुविशेषैर्विच्छुरिता अनूलित्पाश्च सन्तः । शिलायां भवं शैलेयम् । गन्धौषधिविशेषः । शिलायाः 'स्त्रीभ्यो ढक्' इति भवार्थे ढक् । 'शिलाजतु च सैलेयम्' इति यादवः । तेन नद्धेषु व्याप्तेषु शिलातलेषु निषेदुः ।उपविविशुरित्यर्थः ॥ 1. 55 ॥
+गणा इति ॥ गणाः प्रमथगणाः । 'गणाः प्रमथसंख्यौधाः' इति वैजयन्ती । नमेरुप्रसवावतंसाः सुरपुंनागकुसुमशेखराः । 'नमेरुः सुरपुंनागः' इति विश्वः । स्पर्शवतीः सुखस्पर्शाः । मृद्वीरित्यर्थः । प्रशंसायां मतुप् । भूर्जत्वचो भूर्जवल्कलानि दधानाः । वसाना इत्यर्थः । मनःशिलाभिर्धातुविशेषैर्विच्छुरिता अनूलित्पाश्च सन्तः । शिलायां भवं शैलेयम् । गन्धौषधिविशेषः । शिलायाः 'स्त्रीभ्यो ढक्' इति भवार्थे ढक् । 'शिलाजतु च सैलेयम्' इति यादवः । तेन नद्धेषु व्याप्तेषु शिलातलेषु निषेदुः ।उपविविशुरित्यर्थः ॥ 1. 55 ॥
 </details>
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
