--- a/laxyam/padyam/kAlidAsaH/kumArasambhavam/sarva-prastutiH/02.md
+++ b/laxyam/padyam/kAlidAsaH/kumArasambhavam/sarva-prastutiH/02.md
@@ -1212,7 +1212,7 @@ title = "०२"
 
 <details><summary>मल्लिनाथः</summary>
 
-- संपत्स्यत इति ॥ अयं वो युष्माकं कामो मनोरथः सेनानीरुपः संपत्स्यते सेत्स्यति । कश्चित्कियानपि कालः प्रतीक्ष्यताम् । तु किंतु तस्य सेनान्यः सिद्धौ विषय आत्मना स्वयं सर्गः सृष्टिरेव व्यापारस्तं न यास्यामि । नाहं स्त्रक्ष्यामीत्यर्थः ॥ 2.54 ॥
+संपत्स्यत इति ॥ अयं वो युष्माकं कामो मनोरथः सेनानीरुपः संपत्स्यते सेत्स्यति । कश्चित्कियानपि कालः प्रतीक्ष्यताम् । तु किंतु तस्य सेनान्यः सिद्धौ विषय आत्मना स्वयं सर्गः सृष्टिरेव व्यापारस्तं न यास्यामि । नाहं स्त्रक्ष्यामीत्यर्थः ॥ 2.54 ॥
 </details>
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -1256,7 +1256,7 @@ title = "०२"
 
 <details><summary>मल्लिनाथः</summary>
 
-- वृतमिति ॥ प्राक्पुर्वं तेनासुरेणेदमेव देवैरवध्यत्वमेव वृतं प्रार्थितम् । मया चास्मै तारकाय प्रतिश्रुतं प्रतिज्ञातम् । 'प्रत्याङ्भ्यां श्रुवः पूर्वस्य कर्ता' इति संप्रदानत्वाच्चतुर्थी । कर्तव्यं चैतदित्याह-- लोकान्दग्धुमलं शक्तम् । 'पर्यात्पिवचनेष्वलमर्थेषु' इति तुमुन्प्रत्ययः । तस्य तपस्तत्तपो वरेण वरदानेन शमितमिति शेषः ॥ 2.56 ॥
+वृतमिति ॥ प्राक्पुर्वं तेनासुरेणेदमेव देवैरवध्यत्वमेव वृतं प्रार्थितम् । मया चास्मै तारकाय प्रतिश्रुतं प्रतिज्ञातम् । 'प्रत्याङ्भ्यां श्रुवः पूर्वस्य कर्ता' इति संप्रदानत्वाच्चतुर्थी । कर्तव्यं चैतदित्याह-- लोकान्दग्धुमलं शक्तम् । 'पर्यात्पिवचनेष्वलमर्थेषु' इति तुमुन्प्रत्ययः । तस्य तपस्तत्तपो वरेण वरदानेन शमितमिति शेषः ॥ 2.56 ॥
 </details>
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -1350,7 +1350,7 @@ title = "०२"
 
 <details><summary>मल्लिनाथः</summary>
 
-- उमे इति ॥ उभयोः शंभोर्मम चाहितं निषिक्तं बीजं तेजो वोढुं सोढुं सा वोमा शंभोरष्टमूर्तेस्तस्येयं तदीया जलमयी मूर्तिर्वा मम । न तृतीयेत्यर्थः । वा शब्दो द्वन्द्वार्थे न त्वन्यार्थे । एतदेवोदाहृत्येत्थमेव व्याख्यातं गणव्याख्याने । अत्र दीपकालङ्कारः । प्राकरणिकयोरुमामहेश्वरयोरप्राकरणिकयोर्ब्रह्मजलमूर्त्योश्चौपम्यस्य गम्यत्वात् । यथाह भोजराजः- 'प्रस्तुतानामप्रस्तुतानां चौपम्यस्य गम्यत्वे दीपकम्' इति । न चेयं तुल्योगिता तस्याः केवलप्रस्तुतविषत्वेन केवलाप्रस्तुतविषयत्वेन चोत्थानादिति ॥ 2.60 ॥
+उमे इति ॥ उभयोः शंभोर्मम चाहितं निषिक्तं बीजं तेजो वोढुं सोढुं सा वोमा शंभोरष्टमूर्तेस्तस्येयं तदीया जलमयी मूर्तिर्वा मम । न तृतीयेत्यर्थः । वा शब्दो द्वन्द्वार्थे न त्वन्यार्थे । एतदेवोदाहृत्येत्थमेव व्याख्यातं गणव्याख्याने । अत्र दीपकालङ्कारः । प्राकरणिकयोरुमामहेश्वरयोरप्राकरणिकयोर्ब्रह्मजलमूर्त्योश्चौपम्यस्य गम्यत्वात् । यथाह भोजराजः- 'प्रस्तुतानामप्रस्तुतानां चौपम्यस्य गम्यत्वे दीपकम्' इति । न चेयं तुल्योगिता तस्याः केवलप्रस्तुतविषत्वेन केवलाप्रस्तुतविषयत्वेन चोत्थानादिति ॥ 2.60 ॥
 </details>
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
