--- a/laxyam/padyam/kAlidAsaH/kumArasambhavam/sarva-prastutiH/03.md
+++ b/laxyam/padyam/kAlidAsaH/kumArasambhavam/sarva-prastutiH/03.md
@@ -232,7 +232,7 @@ title = "०३"
 
 <details><summary>मल्लिनाथः</summary>
 
-- तवेतिस ॥ किं बहुना, तव प्रसादादनुग्रहात्कुसुमायुधोऽप्यतिदुर्बलास्त्रोऽप्यहमेकं मधुं वसन्तमेव सहायं लब्ध्वा पिनाकः पाणौ यस्य स पिनाकपाणिः । 'प्रहरणार्थेभ्यः परे निष्ठासत्पम्यौ' । हरस्यापि । हरः पिनाकी चेत्यतिदारुण इति भावः । धैर्यच्युतिं धैर्यरानिं कुर्याम् । कर्तु शक्नुयामित्यर्थः । 'शकि लिङ् च' इति शक्यार्थे लिङ् । अन्ये धन्विनो धनुर्भृते मम के । न केऽपीत्यर्थः । किंशब्दः कुत्सायाम् । 'कुत्साप्रश्नवितर्केषु क्षेपे किंशब्द इष्यते' इति शाश्वतः ॥ 3.10 ॥
+तवेतिस ॥ किं बहुना, तव प्रसादादनुग्रहात्कुसुमायुधोऽप्यतिदुर्बलास्त्रोऽप्यहमेकं मधुं वसन्तमेव सहायं लब्ध्वा पिनाकः पाणौ यस्य स पिनाकपाणिः । 'प्रहरणार्थेभ्यः परे निष्ठासत्पम्यौ' । हरस्यापि । हरः पिनाकी चेत्यतिदारुण इति भावः । धैर्यच्युतिं धैर्यरानिं कुर्याम् । कर्तु शक्नुयामित्यर्थः । 'शकि लिङ् च' इति शक्यार्थे लिङ् । अन्ये धन्विनो धनुर्भृते मम के । न केऽपीत्यर्थः । किंशब्दः कुत्सायाम् । 'कुत्साप्रश्नवितर्केषु क्षेपे किंशब्द इष्यते' इति शाश्वतः ॥ 3.10 ॥
 </details>
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -254,7 +254,7 @@ title = "०३"
 
 <details><summary>मल्लिनाथः</summary>
 
-- अथेति ॥ अथ स्मरवाक्यश्रवणानन्तरमाखण्डलः सहस्त्राक्षऊरुदेशात्पादमाक्रमणेन संभावेतं पादपीठं यस्मिंस्तद्यथा तथावतार्थं संकल्पितार्थे हरचिताकर्षणरुपे विषये विवृतात्मशक्तिम् । 'कुर्यां हरस्यापि-' (3/10) इत्यादिना प्रकटीकृतस्वसामर्थ्य कामं स्मरमिदं वक्ष्यमाणां बभाषे ॥ 3.11 ॥
+अथेति ॥ अथ स्मरवाक्यश्रवणानन्तरमाखण्डलः सहस्त्राक्षऊरुदेशात्पादमाक्रमणेन संभावेतं पादपीठं यस्मिंस्तद्यथा तथावतार्थं संकल्पितार्थे हरचिताकर्षणरुपे विषये विवृतात्मशक्तिम् । 'कुर्यां हरस्यापि-' (3/10) इत्यादिना प्रकटीकृतस्वसामर्थ्य कामं स्मरमिदं वक्ष्यमाणां बभाषे ॥ 3.11 ॥
 </details>
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -370,7 +370,7 @@ title = "०३"
 
 <details><summary>मल्लिनाथः</summary>
 
-- तस्मा इति ॥ यतात्मने नियतचित्ताय तस्मै भवाय । 'रुच्यर्थानां प्रीयमाणः' इति संप्रदानत्वाच्चतुर्थि । प्रयतां हिमाद्रेस्तनूजां पार्वतीं रोचयितुं यतस्व । भवितव्यं चात्र पार्वत्यैवेत्याह-योषित्सु स्त्रीषु मध्ये । 'यतश्च निर्धारणम्' इति सत्पमी । क्षमा शक्ता तस्य हरस्य वीर्यं रेतस्तस्य निषेकः क्षरणं तस्य भूमिः क्षेत्रं सा पार्वत्येवेत्यात्मभुवा ब्रह्मणोपदिष्टम् । 'उभे एव क्षमे वोढुम्' (2.60) इत्यादिनोक्तमित्यर्थः ॥ 3.16 ॥
+तस्मा इति ॥ यतात्मने नियतचित्ताय तस्मै भवाय । 'रुच्यर्थानां प्रीयमाणः' इति संप्रदानत्वाच्चतुर्थि । प्रयतां हिमाद्रेस्तनूजां पार्वतीं रोचयितुं यतस्व । भवितव्यं चात्र पार्वत्यैवेत्याह-योषित्सु स्त्रीषु मध्ये । 'यतश्च निर्धारणम्' इति सत्पमी । क्षमा शक्ता तस्य हरस्य वीर्यं रेतस्तस्य निषेकः क्षरणं तस्य भूमिः क्षेत्रं सा पार्वत्येवेत्यात्मभुवा ब्रह्मणोपदिष्टम् । 'उभे एव क्षमे वोढुम्' (2.60) इत्यादिनोक्तमित्यर्थः ॥ 3.16 ॥
 </details>
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -438,7 +438,7 @@ title = "०३"
 
 <details><summary>मल्लिनाथः</summary>
 
-- तस्मिन्निति ॥ सुराणां विजयाभ्युपाये जयस्योपायभूते तस्मिन्हरेऽस्त्रप्रसरस्तवैव नाम । नामेति संभावनायाम् । अन्येषां तु संभावनापि नास्तीति भावः । अतस्त्वं कृती कृतार्थः । तथाहि । अप्रसिद्धमप्यनन्यसाधारणमेव कर्म पुंसां यशसे हि । इदं तु प्रसिद्धमसाधारणं चेत्यतियशस्करमिति भावः ॥ 3.19 ॥
+तस्मिन्निति ॥ सुराणां विजयाभ्युपाये जयस्योपायभूते तस्मिन्हरेऽस्त्रप्रसरस्तवैव नाम । नामेति संभावनायाम् । अन्येषां तु संभावनापि नास्तीति भावः । अतस्त्वं कृती कृतार्थः । तथाहि । अप्रसिद्धमप्यनन्यसाधारणमेव कर्म पुंसां यशसे हि । इदं तु प्रसिद्धमसाधारणं चेत्यतियशस्करमिति भावः ॥ 3.19 ॥
 </details>
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -484,7 +484,7 @@ title = "०३"
 
 <details><summary>मल्लिनाथः</summary>
 
-- मधुरिति ॥ हे मन्मथ ! असौ मधुश्च वसन्तोऽपि ते साहचर्यात्सहचरत्वादेवानुक्तोऽप्यप्रेरितोऽपि सहायः सहकार्येव । तथाहि । समीरणो वायुहुर्ताशनस्याग्नेर्नोदयिता प्रेरको भवेति केन व्यादिश्यते । अत्र मधुसमीरणयोरुक्तिमन्तरेण सहायताकरणं सामान्यधर्मः । स च वाक्यद्वये वस्तुप्रतिवस्तुभावेन पृथङ्निर्दिष्ट ितिप्रतिवस्तूपमालंकारोऽयम्। तदुक्तम्-- 'यत्र सामान्यनिर्देशः पृथग्वाक्यद्वये यदि । गम्यौपम्याश्रिता सा स्यात्प्रतिवस्तूपमा मता ॥' इति ॥ 3.21 ॥
+मधुरिति ॥ हे मन्मथ ! असौ मधुश्च वसन्तोऽपि ते साहचर्यात्सहचरत्वादेवानुक्तोऽप्यप्रेरितोऽपि सहायः सहकार्येव । तथाहि । समीरणो वायुहुर्ताशनस्याग्नेर्नोदयिता प्रेरको भवेति केन व्यादिश्यते । अत्र मधुसमीरणयोरुक्तिमन्तरेण सहायताकरणं सामान्यधर्मः । स च वाक्यद्वये वस्तुप्रतिवस्तुभावेन पृथङ्निर्दिष्ट ितिप्रतिवस्तूपमालंकारोऽयम्। तदुक्तम्-- 'यत्र सामान्यनिर्देशः पृथग्वाक्यद्वये यदि । गम्यौपम्याश्रिता सा स्यात्प्रतिवस्तूपमा मता ॥' इति ॥ 3.21 ॥
 </details>
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -573,7 +573,7 @@ title = "०३"
 
 <details><summary>मल्लिनाथः</summary>
 
-- कुबेरेति । उष्णरश्मौ सूर्ये साहसिके च नायके समयं दक्षिणायनकालं संगमकालं च विलङ्ध्याकाण्डे व्यतिक्रम्य कुबेरगुत्पां धनपतिपालितां कुत्सितशरीरेण केनचिद्रक्षितां च दिशमुदीचीं स्त्रीलिङ्गाक्षित्पां कांचिन्नायिकां च गन्तुं चलितुं संगन्तुं च प्रवृत्ते सति दक्षिणा दिग्दाक्षिण्यवती नायिका च मुखेनाग्रभागेन वक्त्रेण च । वहतीति वहः । पचाद्यच् । गन्धस्य वहं गन्धवहमनीलं व्यलीकेन दुःखेन निश्वासस्तं व्यलीकनिस्वासमिव । 'दुःखे वैलक्ष्ये व्यलीकमप्रियाकार्यंवस्तुनोः' इति वैजयन्ती । उत्ससर्ज प्रवर्तयामास । स्वभर्तरि समयोल्लङ्घनेन पराङ्गनासंगतिं प्रवृत्ते सति स्त्रियो दाक्षिण्यादकिंचिद्वदा दुःखान्निश्वसन्तीति भावः । उत्तरायणे सति मलयानिलाः प्रवृत्ताः इति वाक्यार्थः । अत्रोत्प्रेक्षालंकारः । न च समासोक्तिरेवेयमुत्प्रेक्षानुप्रविष्टेति शङ्कितव्यम् । केवलविशे।सामर्थ्यादेवाप्रस्तुतप्रतीतौ सोत्तिष्ठते । अत्र तु  दक्षिणेति विशेष्यसामर्थ्यादपि नायिका प्रतीयते । नच च श्लेष एव प्रकृताप्रकृतविषयः, उभयश्लेषे श्लिष्टविशेष्यानङ्गीकारात् । तस्माच्छब्दशक्तिमूलोऽयं ध्वनिः । स च व्यलीकनिश्वासरुपचेतनधर्मसंभावनार्थं दक्षिणस्या दिशो नायिकया ग्रहामेदमासदयन्नभेदलक्षणातिशयोक्त्युपजीविनीं निश्वासमिवेति वाच्योत्प्रेक्षां निर्वहतीति वाच्यसिद्ध्यङ्गभूत इत्युत्पश्यामः ॥ 3.25 ॥
+कुबेरेति । उष्णरश्मौ सूर्ये साहसिके च नायके समयं दक्षिणायनकालं संगमकालं च विलङ्ध्याकाण्डे व्यतिक्रम्य कुबेरगुत्पां धनपतिपालितां कुत्सितशरीरेण केनचिद्रक्षितां च दिशमुदीचीं स्त्रीलिङ्गाक्षित्पां कांचिन्नायिकां च गन्तुं चलितुं संगन्तुं च प्रवृत्ते सति दक्षिणा दिग्दाक्षिण्यवती नायिका च मुखेनाग्रभागेन वक्त्रेण च । वहतीति वहः । पचाद्यच् । गन्धस्य वहं गन्धवहमनीलं व्यलीकेन दुःखेन निश्वासस्तं व्यलीकनिस्वासमिव । 'दुःखे वैलक्ष्ये व्यलीकमप्रियाकार्यंवस्तुनोः' इति वैजयन्ती । उत्ससर्ज प्रवर्तयामास । स्वभर्तरि समयोल्लङ्घनेन पराङ्गनासंगतिं प्रवृत्ते सति स्त्रियो दाक्षिण्यादकिंचिद्वदा दुःखान्निश्वसन्तीति भावः । उत्तरायणे सति मलयानिलाः प्रवृत्ताः इति वाक्यार्थः । अत्रोत्प्रेक्षालंकारः । न च समासोक्तिरेवेयमुत्प्रेक्षानुप्रविष्टेति शङ्कितव्यम् । केवलविशे।सामर्थ्यादेवाप्रस्तुतप्रतीतौ सोत्तिष्ठते । अत्र तु  दक्षिणेति विशेष्यसामर्थ्यादपि नायिका प्रतीयते । नच च श्लेष एव प्रकृताप्रकृतविषयः, उभयश्लेषे श्लिष्टविशेष्यानङ्गीकारात् । तस्माच्छब्दशक्तिमूलोऽयं ध्वनिः । स च व्यलीकनिश्वासरुपचेतनधर्मसंभावनार्थं दक्षिणस्या दिशो नायिकया ग्रहामेदमासदयन्नभेदलक्षणातिशयोक्त्युपजीविनीं निश्वासमिवेति वाच्योत्प्रेक्षां निर्वहतीति वाच्यसिद्ध्यङ्गभूत इत्युत्पश्यामः ॥ 3.25 ॥
 </details>
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -749,7 +749,7 @@ title = "०३"
 
 <details><summary>मल्लिनाथः</summary>
 
-- हिमेति । हिमस्य व्यपायादपगमाद्विशदा नीरुजा अधरा ओष्ठा यासां तासामापाण्डरीभूतमुखच्छवीनाम् । कुङ्कुमपरिहारादिति भावः । किंपुरूषाङ्गनानां पत्रविशेषकेषु पत्ररचनासु स्वेदोद्‌गमः पदं चक्रे । घर्मोदयात्स्वेदोदयोऽभूदित्यर्थः । विशदाधरात्वं मधूच्छिष्टराहित्यादिति हेमन्तेषु नार्यो बिम्बोष्ठेषु मधुच्छिष्टं शीतभयाद्दधतीति प्रसिद्धम् ॥ 3.33 ॥
+हिमेति । हिमस्य व्यपायादपगमाद्विशदा नीरुजा अधरा ओष्ठा यासां तासामापाण्डरीभूतमुखच्छवीनाम् । कुङ्कुमपरिहारादिति भावः । किंपुरूषाङ्गनानां पत्रविशेषकेषु पत्ररचनासु स्वेदोद्‌गमः पदं चक्रे । घर्मोदयात्स्वेदोदयोऽभूदित्यर्थः । विशदाधरात्वं मधूच्छिष्टराहित्यादिति हेमन्तेषु नार्यो बिम्बोष्ठेषु मधुच्छिष्टं शीतभयाद्दधतीति प्रसिद्धम् ॥ 3.33 ॥
 </details>
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -1040,7 +1040,7 @@ title = "०३"
 
 <details><summary>मल्लिनाथः</summary>
 
-- भुजंगमेति ॥ बुजंगमेनोन्नद्ध उन्नमय्य बद्धो जटाकलापो येन तं तथोक्तम् । कर्णावसक्तम् । कर्णावलम्बीत्यर्थः । अत एव द्विगुणं द्विरावृत्तमक्षसूत्रमक्षमाला यस्य तं कण्ठप्रभाणां सङ्गेन मिश्रणेन विशेषनीलामतिनीलां ग्रन्थिमतीं बन्धनयुक्तां कृष्णत्वचं कृष्णमृगाजिनं दधानम् ॥ 3.46 ॥
+भुजंगमेति ॥ बुजंगमेनोन्नद्ध उन्नमय्य बद्धो जटाकलापो येन तं तथोक्तम् । कर्णावसक्तम् । कर्णावलम्बीत्यर्थः । अत एव द्विगुणं द्विरावृत्तमक्षसूत्रमक्षमाला यस्य तं कण्ठप्रभाणां सङ्गेन मिश्रणेन विशेषनीलामतिनीलां ग्रन्थिमतीं बन्धनयुक्तां कृष्णत्वचं कृष्णमृगाजिनं दधानम् ॥ 3.46 ॥
 </details>
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -1062,7 +1062,7 @@ title = "०३"
 
 <details><summary>मल्लिनाथः</summary>
 
-- किंचिदिति । किंचित्प्रकाशाः स्तिमिता निश्चला उग्राश्च ताराः कनीनिका येषां तैः । 'तारकाक्ष्णः कनीनिका' इत्यमरः । भ्रूविक्रियायां भ्रूविक्षेपे विरतप्रसङ्गैः प्रसक्तिरहितैरविस्पन्दितपक्ष्ममालैरचलितपक्ष्मपङ्क्तिभिरधःप्रसृता मयूखा येषां तैरधोमयूखैर्नेत्रैः । त्रिनेत्रत्वाद्वहुवचनम् । लक्ष्यीकृतघ्राणं नासाग्रनिविष्टदृष्टिमित्यर्थः । 'करणान्यबहिष्कृत्य स्थणुवन्निश्चलात्मकः । आत्मानं हृदये ध्यायेन्नासाग्रन्यस्तलोचनः ॥' इति योगसारे ॥ 3.47 ॥
+किंचिदिति । किंचित्प्रकाशाः स्तिमिता निश्चला उग्राश्च ताराः कनीनिका येषां तैः । 'तारकाक्ष्णः कनीनिका' इत्यमरः । भ्रूविक्रियायां भ्रूविक्षेपे विरतप्रसङ्गैः प्रसक्तिरहितैरविस्पन्दितपक्ष्ममालैरचलितपक्ष्मपङ्क्तिभिरधःप्रसृता मयूखा येषां तैरधोमयूखैर्नेत्रैः । त्रिनेत्रत्वाद्वहुवचनम् । लक्ष्यीकृतघ्राणं नासाग्रनिविष्टदृष्टिमित्यर्थः । 'करणान्यबहिष्कृत्य स्थणुवन्निश्चलात्मकः । आत्मानं हृदये ध्यायेन्नासाग्रन्यस्तलोचनः ॥' इति योगसारे ॥ 3.47 ॥
 </details>
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -1106,7 +1106,7 @@ title = "०३"
 
 <details><summary>मल्लिनाथः</summary>
 
-- कपालेति । कपालनेत्रान्तरेण ब्रह्मकरोटिनेत्रविवरेण लब्धमार्गैः शिरस्तो ब्रह्मरन्ध्रात् पञ्चम्यास्तसिल्‌ । उदितैरुद्‌बुतैर्ज्योतिः प्ररोहैस्तेजोङ्कुरैमृंणालसूत्राधिकं सौकुमार्यं मार्दवं यस्यास्तां बालस्येन्दोः शिरश्चन्द्रस्य लक्ष्मीं ग्लपयन्तम् ॥ 3.49 ॥
+कपालेति । कपालनेत्रान्तरेण ब्रह्मकरोटिनेत्रविवरेण लब्धमार्गैः शिरस्तो ब्रह्मरन्ध्रात् पञ्चम्यास्तसिल्‌ । उदितैरुद्‌बुतैर्ज्योतिः प्ररोहैस्तेजोङ्कुरैमृंणालसूत्राधिकं सौकुमार्यं मार्दवं यस्यास्तां बालस्येन्दोः शिरश्चन्द्रस्य लक्ष्मीं ग्लपयन्तम् ॥ 3.49 ॥
 </details>
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -1150,7 +1150,7 @@ title = "०३"
 
 <details><summary>मल्लिनाथः</summary>
 
-- स्मरेति । स्मरः कामस्तथाभूतं पूर्वोक्तरूपं मनसाप्यधृष्यमयुग्मनेत्रं विषमाक्षमदूरात्पश्यन् । साध्वसेन सन्नहस्तो विश्लथपाणिः सन् । स्वहस्तात्स्त्रस्तं शरं चापमपि चापं च नालक्षयन्न विवेद । भीतो मुह्यतीति भावः ॥ 3.51 ॥
+स्मरेति । स्मरः कामस्तथाभूतं पूर्वोक्तरूपं मनसाप्यधृष्यमयुग्मनेत्रं विषमाक्षमदूरात्पश्यन् । साध्वसेन सन्नहस्तो विश्लथपाणिः सन् । स्वहस्तात्स्त्रस्तं शरं चापमपि चापं च नालक्षयन्न विवेद । भीतो मुह्यतीति भावः ॥ 3.51 ॥
 </details>
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -1284,7 +1284,7 @@ title = "०३"
 
 <details><summary>मल्लिनाथः</summary>
 
-- तामिति । सर्वावयवेष्वनवद्यामगर्ह्याम् । 'अवद्यपण्ये-' ति निपातः । रतेः कामकलत्रस्यापि ह्रीपदं लज्जानिमित्तमादधानाम् । न्यूनतामावहन्तीमित्यर्थः । तां पार्वतीं वीक्ष्य पुष्पचापः कामो जितेन्द्रिये दिर्जयेऽपीत्यर्थः । शूलिनि शिवे विषये स्वसार्यसिर्द्धि पुनराशशंसे चकमे । पूर्वं 'साध्वससन्नहस्तः' (3,51) इत्यादिना कार्यसिद्धेरुन्मूलितत्वाभिधानादिह पुनरित्युक्तम् ॥ 3.57 ॥
+तामिति । सर्वावयवेष्वनवद्यामगर्ह्याम् । 'अवद्यपण्ये-' ति निपातः । रतेः कामकलत्रस्यापि ह्रीपदं लज्जानिमित्तमादधानाम् । न्यूनतामावहन्तीमित्यर्थः । तां पार्वतीं वीक्ष्य पुष्पचापः कामो जितेन्द्रिये दिर्जयेऽपीत्यर्थः । शूलिनि शिवे विषये स्वसार्यसिर्द्धि पुनराशशंसे चकमे । पूर्वं 'साध्वससन्नहस्तः' (3,51) इत्यादिना कार्यसिद्धेरुन्मूलितत्वाभिधानादिह पुनरित्युक्तम् ॥ 3.57 ॥
 </details>
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
