--- a/laxyam/padyam/kAlidAsaH/kumArasambhavam/sarva-prastutiH/04.md
+++ b/laxyam/padyam/kAlidAsaH/kumArasambhavam/sarva-prastutiH/04.md
@@ -276,7 +276,7 @@ title = "०४"
 
 <details><summary>मल्लिनाथः</summary>
 
-- नयनानीति । अरुणानि नयनानि घूर्णयन्भ्रमयन् । तथा पदे पदे प्रतिपदम् । वीप्सायां द्विरुक्तिः । वचनानि स्खलयन्विपर्यासयन्प्रमदानां वारुणीमदो मद्यमदोऽधुना त्वय्यसति विडम्बनानुकृतिमात्रम् । मदनाभावे मदस्य निष्फलत्वादिति भावः । तथा च शिशुपालवधे- 'तां मदो दयितसंगमभूषः' (10/33) इति ॥ 4.12 ॥
+नयनानीति । अरुणानि नयनानि घूर्णयन्भ्रमयन् । तथा पदे पदे प्रतिपदम् । वीप्सायां द्विरुक्तिः । वचनानि स्खलयन्विपर्यासयन्प्रमदानां वारुणीमदो मद्यमदोऽधुना त्वय्यसति विडम्बनानुकृतिमात्रम् । मदनाभावे मदस्य निष्फलत्वादिति भावः । तथा च शिशुपालवधे- 'तां मदो दयितसंगमभूषः' (10/33) इति ॥ 4.12 ॥
 </details>
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -342,7 +342,7 @@ title = "०४"
 
 <details><summary>मल्लिनाथः</summary>
 
-- अलीति । त्वयानेकशो बहुशो धनुषः कार्मुकस्य गुणकृत्ये मौर्वीकार्ये गुणवत्कर्मणि च नियोजिताधिकृतेयमलिपङ्‌क्तिः करुणस्वनेर्दीनस्वनर्विरुतैः कूचितैर्गुरुशोकां दुर्भरदुःखाम् । 'गुरुस्तु गोःपतौ श्रेष्ठे गुरौ पितरि दुर्भरे' । इति शब्दार्णवः । मामनुरोदितीव उपसर्गात्सकर्मकत्वम् । 'रुदादिभ्यः सार्वधातुके' इतीडागमः ॥ 4.15 ॥
+अलीति । त्वयानेकशो बहुशो धनुषः कार्मुकस्य गुणकृत्ये मौर्वीकार्ये गुणवत्कर्मणि च नियोजिताधिकृतेयमलिपङ्‌क्तिः करुणस्वनेर्दीनस्वनर्विरुतैः कूचितैर्गुरुशोकां दुर्भरदुःखाम् । 'गुरुस्तु गोःपतौ श्रेष्ठे गुरौ पितरि दुर्भरे' । इति शब्दार्णवः । मामनुरोदितीव उपसर्गात्सकर्मकत्वम् । 'रुदादिभ्यः सार्वधातुके' इतीडागमः ॥ 4.15 ॥
 </details>
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -606,7 +606,7 @@ title = "०४"
 
 <details><summary>मल्लिनाथः</summary>
 
-- इतीति । दुःखमस्याः संजातं दुःखिता । संजातदुःखेत्यर्थः । तारकादित्वादितच् । सा रतिरेनं वसन्तमित्युवाच च । चकारः पूर्वोक्तसमुच्चयार्थः । हे वसन्त ! पश्य सुहृदस्त्वत्सखस्य किं स्थितं किमुपस्थितं तदिदं कपोतकर्बुरं पारावतशबलं कणाशश्चूर्णिभूतम् । अल्पार्थाच्छस्प्रत्ययः । भस्म पवनैर्विकीर्यते वक्षिप्यते । पश्य भस्मीभूतस्ते सुहृदित्यर्थः ॥ 4.27 ॥
+इतीति । दुःखमस्याः संजातं दुःखिता । संजातदुःखेत्यर्थः । तारकादित्वादितच् । सा रतिरेनं वसन्तमित्युवाच च । चकारः पूर्वोक्तसमुच्चयार्थः । हे वसन्त ! पश्य सुहृदस्त्वत्सखस्य किं स्थितं किमुपस्थितं तदिदं कपोतकर्बुरं पारावतशबलं कणाशश्चूर्णिभूतम् । अल्पार्थाच्छस्प्रत्ययः । भस्म पवनैर्विकीर्यते वक्षिप्यते । पश्य भस्मीभूतस्ते सुहृदित्यर्थः ॥ 4.27 ॥
 </details>
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -628,7 +628,7 @@ title = "०४"
 
 <details><summary>मल्लिनाथः</summary>
 
-- अयीति । अयि स्मर ! संप्रति दर्शनं देहि । एष माधवो वसन्तः पर्युत्सकस्त्वद्दर्शनोत्कण्ठितः । त्वामप्यनादृतवतोऽस्य को माधव इत्याशङ्क्याह- नृणां पुरुषाणां दयितासु प्रेमानवस्थितमस्थिरम् । चलमित्यर्थः । सुहृज्जने प्रेम तु न चलं खलु ॥ 4.28 ॥
+अयीति । अयि स्मर ! संप्रति दर्शनं देहि । एष माधवो वसन्तः पर्युत्सकस्त्वद्दर्शनोत्कण्ठितः । त्वामप्यनादृतवतोऽस्य को माधव इत्याशङ्क्याह- नृणां पुरुषाणां दयितासु प्रेमानवस्थितमस्थिरम् । चलमित्यर्थः । सुहृज्जने प्रेम तु न चलं खलु ॥ 4.28 ॥
 </details>
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -652,7 +652,7 @@ title = "०४"
 
 <details><summary>मल्लिनाथः</summary>
 
-- गत इति । स ते तसखाऽनिलाहता वायुताडितो दीप इव गत एव न निवर्तते । अहमस्य दीपायमानस्य दशा वर्तिरिव । तिष्ठामीति शेषः । 'दशा वर्ताववस्थायां वस्त्रान्तं स्युर्दशा अपि' । इति विश्वः । कुतः । अविषह्यव्यसनेन सोढुमशक्यदुःखप्रकर्षेण धूमितां संजातधूमां मां पश्य । धूमवत्त्वान्नष्टदीपदशासाम्यं धूमश्च व्यसनमेवेत्यर्थः ॥ 4.29 ॥
+गत इति । स ते तसखाऽनिलाहता वायुताडितो दीप इव गत एव न निवर्तते । अहमस्य दीपायमानस्य दशा वर्तिरिव । तिष्ठामीति शेषः । 'दशा वर्ताववस्थायां वस्त्रान्तं स्युर्दशा अपि' । इति विश्वः । कुतः । अविषह्यव्यसनेन सोढुमशक्यदुःखप्रकर्षेण धूमितां संजातधूमां मां पश्य । धूमवत्त्वान्नष्टदीपदशासाम्यं धूमश्च व्यसनमेवेत्यर्थः ॥ 4.29 ॥
 </details>
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -764,7 +764,7 @@ title = "०४"
 
 <details><summary>मल्लिनाथः</summary>
 
-- अमुनेति ॥ अमुना पुरोवर्तिना सुभगेन शोभनेन प्रियगात्रभस्मनैव । एवकारो मण्डनान्तरनिवृत्त्यर्थः । कषायितस्तनी रञ्जितस्तनो । 'रागे क्वाथे कषायोऽस्त्री निर्यासे सोरभे रसे' । इति वैजयन्ती । नवपल्लवसंस्तरे यथा नवपल्लवतल्प इव विभावसौ वह्नौ तनुं शरीरं रचयिष्यामि निधास्यामीत्यर्थः ॥ 4.34 ॥
+अमुनेति ॥ अमुना पुरोवर्तिना सुभगेन शोभनेन प्रियगात्रभस्मनैव । एवकारो मण्डनान्तरनिवृत्त्यर्थः । कषायितस्तनी रञ्जितस्तनो । 'रागे क्वाथे कषायोऽस्त्री निर्यासे सोरभे रसे' । इति वैजयन्ती । नवपल्लवसंस्तरे यथा नवपल्लवतल्प इव विभावसौ वह्नौ तनुं शरीरं रचयिष्यामि निधास्यामीत्यर्थः ॥ 4.34 ॥
 </details>
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -896,7 +896,7 @@ title = "०४"
 
 <details><summary>मल्लिनाथः</summary>
 
-- कुसुमेति ॥ हे कुसुमायुधपत्नि रते ! तव भर्ता चिराच्चिरं दुर्लभो न भविष्यति । किंत्वचिरमेव सुलभो भविष्यतीत्यर्थः । किंच श्रृणु । तत्कर्मेति शेषः ।येन कर्मणा स ते भर्त्ता हरलोचनस्यार्चिर्ज्वाला । 'ज्वाला भासो न पुंस्यर्चिः' इत्यमरः । तस्मिञ्शलभत्वं पतङ्गत्वं गतः । 'समौ पतङ्गशलभौ' इत्यमरः ॥ 4.40 ॥
+कुसुमेति ॥ हे कुसुमायुधपत्नि रते ! तव भर्ता चिराच्चिरं दुर्लभो न भविष्यति । किंत्वचिरमेव सुलभो भविष्यतीत्यर्थः । किंच श्रृणु । तत्कर्मेति शेषः ।येन कर्मणा स ते भर्त्ता हरलोचनस्यार्चिर्ज्वाला । 'ज्वाला भासो न पुंस्यर्चिः' इत्यमरः । तस्मिञ्शलभत्वं पतङ्गत्वं गतः । 'समौ पतङ्गशलभौ' इत्यमरः ॥ 4.40 ॥
 </details>
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -970,7 +970,7 @@ title = "०४"
 
 <details><summary>मल्लिनाथः</summary>
 
-- तदिति ॥ हेशोभने ! तत्तस्मात्कारणाद्भवितव्यो भविष्यन्प्रियसंगमो यस्य तत्तथोक्तमिदं वपुः परिरक्ष । तथाहि । रविपीतजला नदी तपात्यये प्रावृषि। 'प्रावृट् तपात्यये' इति हलायुधः । पुनरोघेण प्रवाहेण युज्यते संगच्छते हि ॥ 4.44 ॥
+तदिति ॥ हेशोभने ! तत्तस्मात्कारणाद्भवितव्यो भविष्यन्प्रियसंगमो यस्य तत्तथोक्तमिदं वपुः परिरक्ष । तथाहि । रविपीतजला नदी तपात्यये प्रावृषि। 'प्रावृट् तपात्यये' इति हलायुधः । पुनरोघेण प्रवाहेण युज्यते संगच्छते हि ॥ 4.44 ॥
 </details>
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -992,7 +992,7 @@ title = "०४"
 
 <details><summary>मल्लिनाथः</summary>
 
-- इत्यमिति ॥ इत्थमनेन प्रकारेणादृश्यरूपं किमपि भूतं कशिचतप्राणी । 'युक्तेक्ष्मादावृते भूतं प्राण्यतोते समे त्रिषु' इत्यमरः । रतेर्मदनदाराणां मरणव्यवसायबुद्धिं मरणोद्योगबुद्धिं मन्दीचकार । निवारयामासेत्यर्थः । 'मूढाल्पापटुनिर्भाग्या मन्दाः' इत्यमरः । अथ कुसुमायुधबन्धुर्वसन्तश्च तत्प्रत्ययात्तस्मिन्भूते विश्वसात् । 'प्रत्ययोऽधीनशपथज्ञानविश्वासहेतुषु' इत्यमरः । एनां रतिं सुष्ठु चरितार्थानि पदानि येषां तैर्वचोभिर्वाक्यैराश्वासयत् । सर्वथा ते देवताप्रसादात्प्रियसंगमो भविष्यतीत्यादिवचनैरस्या दुःखपाचकारेत्यर्थः ॥ 4.45 ॥
+इत्यमिति ॥ इत्थमनेन प्रकारेणादृश्यरूपं किमपि भूतं कशिचतप्राणी । 'युक्तेक्ष्मादावृते भूतं प्राण्यतोते समे त्रिषु' इत्यमरः । रतेर्मदनदाराणां मरणव्यवसायबुद्धिं मरणोद्योगबुद्धिं मन्दीचकार । निवारयामासेत्यर्थः । 'मूढाल्पापटुनिर्भाग्या मन्दाः' इत्यमरः । अथ कुसुमायुधबन्धुर्वसन्तश्च तत्प्रत्ययात्तस्मिन्भूते विश्वसात् । 'प्रत्ययोऽधीनशपथज्ञानविश्वासहेतुषु' इत्यमरः । एनां रतिं सुष्ठु चरितार्थानि पदानि येषां तैर्वचोभिर्वाक्यैराश्वासयत् । सर्वथा ते देवताप्रसादात्प्रियसंगमो भविष्यतीत्यादिवचनैरस्या दुःखपाचकारेत्यर्थः ॥ 4.45 ॥
 </details>
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
