--- a/laxyam/padyam/kAlidAsaH/kumArasambhavam/sarva-prastutiH/05.md
+++ b/laxyam/padyam/kAlidAsaH/kumArasambhavam/sarva-prastutiH/05.md
@@ -292,7 +292,7 @@ title = "०५"
 
 <details><summary>मल्लिनाथः</summary>
 
-- पुनरिति ॥ नियमस्थया व्रतस्थया तया देव्या द्वयेऽपि द्वयं पुनर्ग्रहीतुं निक्षेपोऽर्पितमिव निक्षेपत्वेनार्पितं किमु । क्वचित् । 'द्वयीषु' इति प्रामादिकः पाठः । कुत्र द्वये किं द्वयमर्पितमित्याह-तन्वीषु लतासु विलासएव चेष्टितं विलासचेष्टितं हरिणाङ्गनासु विलासदृष्टं चञ्चलावलोकितं च व्रतस्थायां तस्यां तयोरदर्शनाल्लतादिषु दर्शनाच्चार्पितमिवेत्युत्प्रेक्षा न तु वस्तुतोऽर्पणमस्तीति भावः ॥ 5.13 ॥
+पुनरिति ॥ नियमस्थया व्रतस्थया तया देव्या द्वयेऽपि द्वयं पुनर्ग्रहीतुं निक्षेपोऽर्पितमिव निक्षेपत्वेनार्पितं किमु । क्वचित् । 'द्वयीषु' इति प्रामादिकः पाठः । कुत्र द्वये किं द्वयमर्पितमित्याह-तन्वीषु लतासु विलासएव चेष्टितं विलासचेष्टितं हरिणाङ्गनासु विलासदृष्टं चञ्चलावलोकितं च व्रतस्थायां तस्यां तयोरदर्शनाल्लतादिषु दर्शनाच्चार्पितमिवेत्युत्प्रेक्षा न तु वस्तुतोऽर्पणमस्तीति भावः ॥ 5.13 ॥
 </details>
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -756,7 +756,7 @@ title = "०५"
 
 <details><summary>मल्लिनाथः</summary>
 
-- अपीति । त्वयावर्जितेन सक्तेन वारिणा संभृतं जनितमासां वीरुधां लतानां प्रवाल पल्लवमनुबन्ध्यप्यनुस्यूतं किम् । यत्प्रवालं चिरोज्झितश्चिरकालत्यक्तो लाक्षारागो येन तत्तथापि पाटलम् । स्वभावरक्तमित्यर्थः । तेन चिरोज्झितालक्तकपाटलेन ते तव दन्तवाससाधरेण । 'ओष्ठाधरौ तु रदनच्छदौ दशनवाससी' इत्यमरः । तुलां साम्यमारोहति । गच्छतीत्यर्थः । अत्र तुलाशब्दस्य सादृश्यवाचित्वात्तद्योगेऽपि 'तुल्यार्थैरतुलोपमाभ्यामि'- ति न तृतीयाप्रतिषेधस्तत्र सूत्रे सदृशवाचिन एव ग्रहणादिति ॥ 5.34 ॥
+अपीति । त्वयावर्जितेन सक्तेन वारिणा संभृतं जनितमासां वीरुधां लतानां प्रवाल पल्लवमनुबन्ध्यप्यनुस्यूतं किम् । यत्प्रवालं चिरोज्झितश्चिरकालत्यक्तो लाक्षारागो येन तत्तथापि पाटलम् । स्वभावरक्तमित्यर्थः । तेन चिरोज्झितालक्तकपाटलेन ते तव दन्तवाससाधरेण । 'ओष्ठाधरौ तु रदनच्छदौ दशनवाससी' इत्यमरः । तुलां साम्यमारोहति । गच्छतीत्यर्थः । अत्र तुलाशब्दस्य सादृश्यवाचित्वात्तद्योगेऽपि 'तुल्यार्थैरतुलोपमाभ्यामि'- ति न तृतीयाप्रतिषेधस्तत्र सूत्रे सदृशवाचिन एव ग्रहणादिति ॥ 5.34 ॥
 </details>
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -890,7 +890,7 @@ title = "०५"
 
 <details><summary>मल्लिनाथः</summary>
 
-- अत इति । हे तपोधने ! अतः सख्याद्वेतोरत्र बहुक्षमाम् । बहूक्तिसहाम् यद्वा क्षमावतीम् । भवतीं त्वां द्विजातिभावाद् ब्राह्मणात्वादुपपन्नचापलः सुलभधार्ष्ट्योयं जनः । स्वयमित्यर्थः । किंचित्प्रष्टुं मनो यस्य स किञ्चित्प्रष्टुमनाः प्रष्टकामः । 'तुं काममनसोरपी' ति मकारलोपः । रहसि भवं रहस्य गोप्यं न चेत्प्रतिवक्तुमर्हसि ॥ 5.40 ॥
+अत इति । हे तपोधने ! अतः सख्याद्वेतोरत्र बहुक्षमाम् । बहूक्तिसहाम् यद्वा क्षमावतीम् । भवतीं त्वां द्विजातिभावाद् ब्राह्मणात्वादुपपन्नचापलः सुलभधार्ष्ट्योयं जनः । स्वयमित्यर्थः । किंचित्प्रष्टुं मनो यस्य स किञ्चित्प्रष्टुमनाः प्रष्टकामः । 'तुं काममनसोरपी' ति मकारलोपः । रहसि भवं रहस्य गोप्यं न चेत्प्रतिवक्तुमर्हसि ॥ 5.40 ॥
 </details>
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -1030,7 +1030,7 @@ title = "०५"
 
 <details><summary>मल्लिनाथः</summary>
 
-- निवेदितमिति ॥ सोष्मणा निश्वसितेन निश्वासवायुना निवेदितम् । चिन्तानुभावेनोष्णौच्छ्वासेन ते वरार्थित्वं सूचितमित्यर्थः । तर्हि किं प्रश्नव्यसनेनेत्याह-मनस्तु तथापि मे संशयमेव गाहते प्राप्नोति । कुतः ? ते तव । 'कृत्यानां कर्तरि वा' इति षष्ठौ । प्रार्थयितव्यः प्रार्थयितुमर्ह एव न दृश्यते । प्रार्थितदुर्लभः प्रार्थितो यो दुर्लभा स कथं भविष्यति ? नास्त्येवेत्यर्थः ॥ 5.46 ॥
+निवेदितमिति ॥ सोष्मणा निश्वसितेन निश्वासवायुना निवेदितम् । चिन्तानुभावेनोष्णौच्छ्वासेन ते वरार्थित्वं सूचितमित्यर्थः । तर्हि किं प्रश्नव्यसनेनेत्याह-मनस्तु तथापि मे संशयमेव गाहते प्राप्नोति । कुतः ? ते तव । 'कृत्यानां कर्तरि वा' इति षष्ठौ । प्रार्थयितव्यः प्रार्थयितुमर्ह एव न दृश्यते । प्रार्थितदुर्लभः प्रार्थितो यो दुर्लभा स कथं भविष्यति ? नास्त्येवेत्यर्थः ॥ 5.46 ॥
 </details>
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -1388,7 +1388,7 @@ title = "०५"
 
 <details><summary>मल्लिनाथः</summary>
 
-- अगूढेति । इङ्गितज्ञया पार्वतीहृदयाभिज्ञया । 'इङ्गितंहृद्गतो भावः' इति सज्जनः । तया गौरीसख्योत्येवमगूढसद्भावं प्रकाशितसदभिप्रायं यथा तथा निवेदितो ज्ञापितो निष्ठा मरणमवधिर्यस्य स नैष्ठिको यावज्जीवब्रह्मचारी सुन्दरो विलासी । नैष्ठिकश्चासौ सुन्दरश्चेति तथोक्तः । द्वयोरन्यतरस्य विशेषणत्वविवक्षायां विशेषणसमासः । किंतु नैषठिकत्वविशेषणेन कामित्वविरोधः । अथवा देवस्यालौकिकमहिमत्वादुभयं तात्त्विविशेषणेन कामित्वविरोधः । अथवा देवस्यालौकिकमहिमत्वादुभयं तात्त्वि कमिति न विरोधः । अव्यञ्जितं हर्षलक्षणं मुखरागादि हर्षलिङ्गं यस्य तथाभूतः सन् । अयि गौरि ! अयिति कोमलामन्त्रणे । इदं त्वत्सखीभाषितमेवम् । सत्यं किमित्यर्थः । परिहासः केलिर्वा । 'द्रवकेलिपरीहासाः' इत्यमरः । इत्येवमुमामपृच्छत्पृष्टवान् ॥ 5.62 ॥
+अगूढेति । इङ्गितज्ञया पार्वतीहृदयाभिज्ञया । 'इङ्गितंहृद्गतो भावः' इति सज्जनः । तया गौरीसख्योत्येवमगूढसद्भावं प्रकाशितसदभिप्रायं यथा तथा निवेदितो ज्ञापितो निष्ठा मरणमवधिर्यस्य स नैष्ठिको यावज्जीवब्रह्मचारी सुन्दरो विलासी । नैष्ठिकश्चासौ सुन्दरश्चेति तथोक्तः । द्वयोरन्यतरस्य विशेषणत्वविवक्षायां विशेषणसमासः । किंतु नैषठिकत्वविशेषणेन कामित्वविरोधः । अथवा देवस्यालौकिकमहिमत्वादुभयं तात्त्विविशेषणेन कामित्वविरोधः । अथवा देवस्यालौकिकमहिमत्वादुभयं तात्त्वि कमिति न विरोधः । अव्यञ्जितं हर्षलक्षणं मुखरागादि हर्षलिङ्गं यस्य तथाभूतः सन् । अयि गौरि ! अयिति कोमलामन्त्रणे । इदं त्वत्सखीभाषितमेवम् । सत्यं किमित्यर्थः । परिहासः केलिर्वा । 'द्रवकेलिपरीहासाः' इत्यमरः । इत्येवमुमामपृच्छत्पृष्टवान् ॥ 5.62 ॥
 </details>
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -1612,7 +1612,7 @@ title = "०५"
 
 <details><summary>मल्लिनाथः</summary>
 
-- वपुरिति । वपुस्तावदस्य विरुपाणि विकृतरुपाण्यक्षीणि नेत्राणि यस्य तद्विरुपाक्षम् । 'बहुव्रोहौ सक्थ्यक्षणोः स्वाङ्गात्षच्' इति षच् प्रत्ययः । वैरुप्यं च त्रिनेत्रत्वादिति क्षीरस्वामी । अतो न सौन्दर्यवार्त्तापीत्यर्थः । 'अलक्ष्यमज्ञातं जन्म'    इति पाठे जनिरुत्पत्तिरलक्षिता न ज्ञाता । 'जनिरुत्पत्तिरुद्भवः' इत्यमरः । वसु वित्तं दिगम्बरत्वेनैव निवेदितम् । नास्तीति ज्ञापितमित्यर्थः । यदि वित्तं भवति तदा कथं दिगम्बरो भवति । अतो ज्ञेयं निर्धनोऽयमिति । कि बहुना हे बालमगाक्षि पार्वति ! वरेषु वोढृषु । 'वरौ जामातृवोढारौ' इति विश्वः । यद्रूपवित्तादिकं मृग्यते कम्यातद्वन्धुभिरन्विष्यते तत्त्रिलोचने त्र्यम्बके व्यस्तम् । एकमपि समस्तं मा भूदिति भावः । अस्ति किम् । नास्त्येवेत्यर्थः ॥ 5.72 ॥
+वपुरिति । वपुस्तावदस्य विरुपाणि विकृतरुपाण्यक्षीणि नेत्राणि यस्य तद्विरुपाक्षम् । 'बहुव्रोहौ सक्थ्यक्षणोः स्वाङ्गात्षच्' इति षच् प्रत्ययः । वैरुप्यं च त्रिनेत्रत्वादिति क्षीरस्वामी । अतो न सौन्दर्यवार्त्तापीत्यर्थः । 'अलक्ष्यमज्ञातं जन्म'    इति पाठे जनिरुत्पत्तिरलक्षिता न ज्ञाता । 'जनिरुत्पत्तिरुद्भवः' इत्यमरः । वसु वित्तं दिगम्बरत्वेनैव निवेदितम् । नास्तीति ज्ञापितमित्यर्थः । यदि वित्तं भवति तदा कथं दिगम्बरो भवति । अतो ज्ञेयं निर्धनोऽयमिति । कि बहुना हे बालमगाक्षि पार्वति ! वरेषु वोढृषु । 'वरौ जामातृवोढारौ' इति विश्वः । यद्रूपवित्तादिकं मृग्यते कम्यातद्वन्धुभिरन्विष्यते तत्त्रिलोचने त्र्यम्बके व्यस्तम् । एकमपि समस्तं मा भूदिति भावः । अस्ति किम् । नास्त्येवेत्यर्थः ॥ 5.72 ॥
 </details>
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
