--- a/laxyam/padyam/kAlidAsaH/kumArasambhavam/sarva-prastutiH/06.md
+++ b/laxyam/padyam/kAlidAsaH/kumArasambhavam/sarva-prastutiH/06.md
@@ -48,7 +48,7 @@ title = "०६"
 
 <details><summary>मल्लिनाथः</summary>
 
-- तयेति । तया सख्या । सखीमुखेनेत्यर्थः । व्याहृतसंदेशोक्तवाचिका प्रिये हरविषये निभृता निश्चला । परमासक्तेत्यर्थः । सा गौरी । मधौ वसन्ते निभृता स्थिरया परभृतया कोकिलयोन्मुखी मुखरा परभृतोन्मुखी । मुखशब्देनाभिभाषणव्यापारो लक्ष्यते । तथा च परभृतामुखेन व्याहरन्तीत्यर्थः । परभृतेति क्रियाशब्दविवक्षायाम् 'जातेरस्त्री-' ति ङीप्प्रत्ययो नभवति । तयेत्युपमेयस्य व्यस्तत्वादुपमानवाचिपरभृताशब्दस्य समासः सेढव्यः । अथवा भृद्भरणम् । संपदादित्वात्किवप् । परैर्भृद्यस्यास्तया परभृतेति व्यासेन व्याख्येयम् । पदमञ्जरीकारस्तु परैभ्रिंयत इति कर्मणि क्विपमाह । जूतयष्टिश्चूतशाखेवाभ्याशेऽन्तिके बभौ । 'सदेशाभ्याशसविधसमर्यादसवेशवत् । उपकण्ठान्तिकाभ्यर्णाभ्यग्रा अप्यभितोऽव्ययम् ॥' इत्यमरः ॥ 6.2 ॥
+तयेति । तया सख्या । सखीमुखेनेत्यर्थः । व्याहृतसंदेशोक्तवाचिका प्रिये हरविषये निभृता निश्चला । परमासक्तेत्यर्थः । सा गौरी । मधौ वसन्ते निभृता स्थिरया परभृतया कोकिलयोन्मुखी मुखरा परभृतोन्मुखी । मुखशब्देनाभिभाषणव्यापारो लक्ष्यते । तथा च परभृतामुखेन व्याहरन्तीत्यर्थः । परभृतेति क्रियाशब्दविवक्षायाम् 'जातेरस्त्री-' ति ङीप्प्रत्ययो नभवति । तयेत्युपमेयस्य व्यस्तत्वादुपमानवाचिपरभृताशब्दस्य समासः सेढव्यः । अथवा भृद्भरणम् । संपदादित्वात्किवप् । परैर्भृद्यस्यास्तया परभृतेति व्यासेन व्याख्येयम् । पदमञ्जरीकारस्तु परैभ्रिंयत इति कर्मणि क्विपमाह । जूतयष्टिश्चूतशाखेवाभ्याशेऽन्तिके बभौ । 'सदेशाभ्याशसविधसमर्यादसवेशवत् । उपकण्ठान्तिकाभ्यर्णाभ्यग्रा अप्यभितोऽव्ययम् ॥' इत्यमरः ॥ 6.2 ॥
 </details>
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -855,7 +855,7 @@ title = "०६"
 
 <details><summary>मल्लिनाथः</summary>
 
-- गङ्गेति । गङ्गायाः स्त्रोतोभिः प्रवाहैः परिक्षिप्तं परिवेष्टितम् । तैरेव सपरिखमित्यर्थः । वप्रश्चयः । प्राकारचैत्यमिति यावत् । 'स्याच्चयो वप्रमस्त्रियाम् ।' इत्यमरः । तस्यान्तर्मध्ये ज्वलिताः प्रकाशमाना ओषधयो यस्य तत्तथोक्तम् । ज्वलितौषधित्वाद्रात्रिषु संचारिणां दीपनिरपेक्षमित्यर्थः । बृहन् बिपुलो मणिशिलानां माणिक्यानां सालः 'प्राकारो वरणः सालः' इत्यमरः । यस्मिंस्तत् अतएव गुप्तवपि संवरणेऽपि मनोहरम् । अकृत्रिमदुर्गसवरणमिति भावः ॥ 6.38 ॥
+गङ्गेति । गङ्गायाः स्त्रोतोभिः प्रवाहैः परिक्षिप्तं परिवेष्टितम् । तैरेव सपरिखमित्यर्थः । वप्रश्चयः । प्राकारचैत्यमिति यावत् । 'स्याच्चयो वप्रमस्त्रियाम् ।' इत्यमरः । तस्यान्तर्मध्ये ज्वलिताः प्रकाशमाना ओषधयो यस्य तत्तथोक्तम् । ज्वलितौषधित्वाद्रात्रिषु संचारिणां दीपनिरपेक्षमित्यर्थः । बृहन् बिपुलो मणिशिलानां माणिक्यानां सालः 'प्राकारो वरणः सालः' इत्यमरः । यस्मिंस्तत् अतएव गुप्तवपि संवरणेऽपि मनोहरम् । अकृत्रिमदुर्गसवरणमिति भावः ॥ 6.38 ॥
 </details>
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -987,7 +987,7 @@ title = "०६"
 
 <details><summary>मल्लिनाथः</summary>
 
-- यौवनान्तमिति । यस्मिन्पुरे वयो यौवनान्तं यौवनावधिकम् । सर्वेऽप्यजरा इत्यर्थः । तया कुसुमायुधात्कामात् । अन्य इति शेषः । अन्तको मृत्युनं । अस्तीति शेषः । विरहिणां तादृग्दुःखोत्पादकत्वादन्तकत्त्वोपचारः । कामं विना मृत्युर्नास्तोत्यर्थः । अतएव तत्कार्यंभूतमरणाभाव इत्याशयोनाह-रतीति । रतिखेदसमुत्पन्ना निद्रा सुप्तिरेव संज्ञाविपर्ययश्चेतनापगमः । न तु दीर्घनिद्रारुप इत्यर्थः । अत्रत्याः सर्वेऽजरामरा इति श्लोकतात्पर्यार्थः । अन्तयत्यन्तं करोतीत्यन्तकः । अन्तयतेस्तत्करोतीति ण्यन्ताद्यत्प्रत्ययः ॥ 6.44 ॥
+यौवनान्तमिति । यस्मिन्पुरे वयो यौवनान्तं यौवनावधिकम् । सर्वेऽप्यजरा इत्यर्थः । तया कुसुमायुधात्कामात् । अन्य इति शेषः । अन्तको मृत्युनं । अस्तीति शेषः । विरहिणां तादृग्दुःखोत्पादकत्वादन्तकत्त्वोपचारः । कामं विना मृत्युर्नास्तोत्यर्थः । अतएव तत्कार्यंभूतमरणाभाव इत्याशयोनाह-रतीति । रतिखेदसमुत्पन्ना निद्रा सुप्तिरेव संज्ञाविपर्ययश्चेतनापगमः । न तु दीर्घनिद्रारुप इत्यर्थः । अत्रत्याः सर्वेऽजरामरा इति श्लोकतात्पर्यार्थः । अन्तयत्यन्तं करोतीत्यन्तकः । अन्तयतेस्तत्करोतीति ण्यन्ताद्यत्प्रत्ययः ॥ 6.44 ॥
 </details>
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -1053,7 +1053,7 @@ title = "०६"
 
 <details><summary>मल्लिनाथः</summary>
 
-- अथेति । ते दिवि भवा दिव्या मुनयो हिमवत इदं हैमवतं पुरं प्रेक्ष्य स्वर्गाभिसंधिना स्वर्गोद्देशेन यत्सुकृतं ज्योतिष्टोमाद्यनुष्ठानं तत्स्वर्गाभिसंधिसुकृतं वञ्चनां प्रतारणामिव मेनिरे । हिमवन्नगरमवेक्ष्य स्वर्गस्य पुण्यफलत्वं वदता वेदेन वयं विप्रलब्धा इत्यर्थः । स्वर्गादतिरमणीयमिति भावः ॥ 6.47 ॥
+अथेति । ते दिवि भवा दिव्या मुनयो हिमवत इदं हैमवतं पुरं प्रेक्ष्य स्वर्गाभिसंधिना स्वर्गोद्देशेन यत्सुकृतं ज्योतिष्टोमाद्यनुष्ठानं तत्स्वर्गाभिसंधिसुकृतं वञ्चनां प्रतारणामिव मेनिरे । हिमवन्नगरमवेक्ष्य स्वर्गस्य पुण्यफलत्वं वदता वेदेन वयं विप्रलब्धा इत्यर्थः । स्वर्गादतिरमणीयमिति भावः ॥ 6.47 ॥
 </details>
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -1365,7 +1365,7 @@ title = "०६"
 
 <details><summary>मल्लिनाथः</summary>
 
-- कर्तव्यमिति । कर्तव्यं कार्यं वो युष्माकं न पश्यामि । निःस्पृहत्वादितिभावः । अथ स्याच्चेद्विद्येत यदि, किं नोपपद्यते किं नाम न संभवति । सर्वं सुलभमेवेत्यर्थः । अथवा किमत्र प्रयोजनचिन्तयेत्याह-- मत्पावनाय मच्छोधनायैव भवतामिह विषये प्रस्थानम् । इमं देशमुद्दिश्येदं प्रयाणमित्यर्थः । मन्ये तर्कयामि ॥ 6.61 ॥
+कर्तव्यमिति । कर्तव्यं कार्यं वो युष्माकं न पश्यामि । निःस्पृहत्वादितिभावः । अथ स्याच्चेद्विद्येत यदि, किं नोपपद्यते किं नाम न संभवति । सर्वं सुलभमेवेत्यर्थः । अथवा किमत्र प्रयोजनचिन्तयेत्याह-- मत्पावनाय मच्छोधनायैव भवतामिह विषये प्रस्थानम् । इमं देशमुद्दिश्येदं प्रयाणमित्यर्थः । मन्ये तर्कयामि ॥ 6.61 ॥
 </details>
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -1498,7 +1498,7 @@ title = "०६"
 
 <details><summary>मल्लिनाथः</summary>
 
-- स्थान इति । त्वां स्थावरात्मानं स्थावररुपिणं विष्णुमाहुः 'स्थावराणां हिमालयः' इति गीतावचनात् । स्थने युक्तम् । युक्तार्थेऽव्ययमेतत् । 'युक्ते द्वे सांप्रतं स्थाने' इत्यमरः । तथाहि । ते तव कुक्षिश्चराचराणां जङ्गमस्थावररुपिणां भूतानां पृथिव्यादीनामाधारतां गतः । तवेव विष्णोः कुक्षिरेवंभूत इति भावः ॥ 6.67 ॥
+स्थान इति । त्वां स्थावरात्मानं स्थावररुपिणं विष्णुमाहुः 'स्थावराणां हिमालयः' इति गीतावचनात् । स्थने युक्तम् । युक्तार्थेऽव्ययमेतत् । 'युक्ते द्वे सांप्रतं स्थाने' इत्यमरः । तथाहि । ते तव कुक्षिश्चराचराणां जङ्गमस्थावररुपिणां भूतानां पृथिव्यादीनामाधारतां गतः । तवेव विष्णोः कुक्षिरेवंभूत इति भावः ॥ 6.67 ॥
 </details>
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -1520,7 +1520,7 @@ title = "०६"
 
 <details><summary>मल्लिनाथः</summary>
 
-- गामिति । नागः शेषाहिर्मृणालमृदुभिर्बिसकोमलैः फणैर्गां भुवं कथमघास्यद्धारयेत् । त्वमा रसातलमूलात्पातालपर्यन्तम् । विकल्पादसामासः नावालम्बिष्यथाश्चेत्पादैर्नावलम्बेथा यदि । त्वदवलम्बनादेव भुजगराजोऽपि भुवं बिभर्तीत्यर्थः । अत्र क्रियातिपत्तयभावाल्लृङ्प्रयोगश्चिन्त्यः ॥ 6.68 ॥
+गामिति । नागः शेषाहिर्मृणालमृदुभिर्बिसकोमलैः फणैर्गां भुवं कथमघास्यद्धारयेत् । त्वमा रसातलमूलात्पातालपर्यन्तम् । विकल्पादसामासः नावालम्बिष्यथाश्चेत्पादैर्नावलम्बेथा यदि । त्वदवलम्बनादेव भुजगराजोऽपि भुवं बिभर्तीत्यर्थः । अत्र क्रियातिपत्तयभावाल्लृङ्प्रयोगश्चिन्त्यः ॥ 6.68 ॥
 </details>
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -1542,7 +1542,7 @@ title = "०६"
 
 <details><summary>मल्लिनाथः</summary>
 
-- अच्छिन्नेति । अच्छिन्ना अविच्छिन्ना अमलाश्च संतानाः प्रबन्धाः प्रवाहाश्च यासां तस्तथोक्ताः समुद्रोर्मिभिरनिवारिताः । पारगमनादन्तःप्रवेशाच्चेति भावः । ते तव कीर्तयः सरितश्च गङ्गादयः पुण्यत्वात्पवित्रत्वाल्लोकान्पुनन्ति पावयन्ति । लोकपावनाः खलु पुण्यश्लोका इति भावः । केवलप्रकृतविष्यस्तुल्ययोगितालेकारः ॥ 6.69 ॥
+अच्छिन्नेति । अच्छिन्ना अविच्छिन्ना अमलाश्च संतानाः प्रबन्धाः प्रवाहाश्च यासां तस्तथोक्ताः समुद्रोर्मिभिरनिवारिताः । पारगमनादन्तःप्रवेशाच्चेति भावः । ते तव कीर्तयः सरितश्च गङ्गादयः पुण्यत्वात्पवित्रत्वाल्लोकान्पुनन्ति पावयन्ति । लोकपावनाः खलु पुण्यश्लोका इति भावः । केवलप्रकृतविष्यस्तुल्ययोगितालेकारः ॥ 6.69 ॥
 </details>
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -1740,7 +1740,7 @@ title = "०६"
 
 <details><summary>मल्लिनाथः</summary>
 
-- स इति । विश्वस्य जगतः कर्मणां साक्षी द्रष्टा । 'साक्षाद्द्रष्टरि संज्ञायाम्' इतिनिप्रत्ययः । वरानिष्टान्ददातीति वरदः । 'आतोऽनिपसर्गे कः' इति कप्रत्ययः । स पूर्वोक्तः शंभुरस्मत्संक्रामितैः पदैरस्मासु निवेशितैर्वाक्यैस्ते दुहितरं साक्षाद् वृणुते । अस्मन्मुखेन स्वयमेव याचत इत्यर्थः ॥ 6.78 ॥
+स इति । विश्वस्य जगतः कर्मणां साक्षी द्रष्टा । 'साक्षाद्द्रष्टरि संज्ञायाम्' इतिनिप्रत्ययः । वरानिष्टान्ददातीति वरदः । 'आतोऽनिपसर्गे कः' इति कप्रत्ययः । स पूर्वोक्तः शंभुरस्मत्संक्रामितैः पदैरस्मासु निवेशितैर्वाक्यैस्ते दुहितरं साक्षाद् वृणुते । अस्मन्मुखेन स्वयमेव याचत इत्यर्थः ॥ 6.78 ॥
 </details>
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -1830,7 +1830,7 @@ title = "०६"
 
 <details><summary>मल्लिनाथः</summary>
 
-- उमेति । उमा वधूः । इमे वयं याचितारः प्रार्थकाः । शंभुर्वरो वोढा । एष विधिरेषा सामग्री त्वत्कुलस्योद्भूतये उच्छ्रयायालं पर्याप्तं हि । 'नमः स्वस्तिस्वाहास्वधे-' त्यादिना चतुर्थि ॥ 6.82 ॥
+उमेति । उमा वधूः । इमे वयं याचितारः प्रार्थकाः । शंभुर्वरो वोढा । एष विधिरेषा सामग्री त्वत्कुलस्योद्भूतये उच्छ्रयायालं पर्याप्तं हि । 'नमः स्वस्तिस्वाहास्वधे-' त्यादिना चतुर्थि ॥ 6.82 ॥
 </details>
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -1852,7 +1852,7 @@ title = "०६"
 
 <details><summary>मल्लिनाथः</summary>
 
-- अस्तोतुरिति । स्वयमन्यस्तोता न भवतीत्यस्तोतुः, कुंतुस्तूयमानस्य सर्वस्तुत्यस्य, वन्द्यस्य, जगद्वन्द्यस्य स्वयमन्यं न वन्दत इत्यनन्यवन्दिनो विश्वगुरोर्देवस्य सुतासंबन्धविधिना यौनसंबन्धाचरणेन गुरुर्भव । यो नान्यं स्तौति न वन्दते तस्यापि त्वं स्तुत्यो वन्द्यश्चेत्यहो तव भाग्यवत्तेत्यर्थः ॥ 6.83 ॥
+अस्तोतुरिति । स्वयमन्यस्तोता न भवतीत्यस्तोतुः, कुंतुस्तूयमानस्य सर्वस्तुत्यस्य, वन्द्यस्य, जगद्वन्द्यस्य स्वयमन्यं न वन्दत इत्यनन्यवन्दिनो विश्वगुरोर्देवस्य सुतासंबन्धविधिना यौनसंबन्धाचरणेन गुरुर्भव । यो नान्यं स्तौति न वन्दते तस्यापि त्वं स्तुत्यो वन्द्यश्चेत्यहो तव भाग्यवत्तेत्यर्थः ॥ 6.83 ॥
 </details>
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -1874,7 +1874,7 @@ title = "०६"
 
 <details><summary>मल्लिनाथः</summary>
 
-- एवमिति । देवर्षावङ्गिरस्येवंवादिनि सति पार्वती पितुः पार्श्वेऽधोमुखी सती । लज्जयेति शेषः । लीलाकमलपत्त्राणि गणयामास संचख्यौ । लज्जावशात्कमलदलगणनाव्याजेन हर्ष जुगोपेत्यर्थः । अनेनावहित्याख्यः संचारी भाव उक्तः । तदुक्तम्- 'अवहित्था तु लज्जादेर्हर्षादाकारगोपनम्' । इति ॥ 6.84 ॥
+एवमिति । देवर्षावङ्गिरस्येवंवादिनि सति पार्वती पितुः पार्श्वेऽधोमुखी सती । लज्जयेति शेषः । लीलाकमलपत्त्राणि गणयामास संचख्यौ । लज्जावशात्कमलदलगणनाव्याजेन हर्ष जुगोपेत्यर्थः । अनेनावहित्याख्यः संचारी भाव उक्तः । तदुक्तम्- 'अवहित्था तु लज्जादेर्हर्षादाकारगोपनम्' । इति ॥ 6.84 ॥
 </details>
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -1940,7 +1940,7 @@ title = "०६"
 
 <details><summary>मल्लिनाथः</summary>
 
-- इदमिति । स हिमवान्वचसामन्ते मुनिवाक्यावसानेऽत्र मुनिवाक्य इदमुत्तरश्लोके वक्ष्यमाणं दानमेव न्याय्यं न्यायादनपेतमुत्तरमिति बुद्ध्या चित्तेन विमृश्य विचिन्त्य मङ्गलं यथा तथालंकृतां सुतामाददे हस्ताभ्यां जग्राह ॥ 6.87 ॥
+इदमिति । स हिमवान्वचसामन्ते मुनिवाक्यावसानेऽत्र मुनिवाक्य इदमुत्तरश्लोके वक्ष्यमाणं दानमेव न्याय्यं न्यायादनपेतमुत्तरमिति बुद्ध्या चित्तेन विमृश्य विचिन्त्य मङ्गलं यथा तथालंकृतां सुतामाददे हस्ताभ्यां जग्राह ॥ 6.87 ॥
 </details>
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
