--- a/laxyam/padyam/kAlidAsaH/kumArasambhavam/sarva-prastutiH/07.md
+++ b/laxyam/padyam/kAlidAsaH/kumArasambhavam/sarva-prastutiH/07.md
@@ -48,7 +48,7 @@ title = "०७"
 
 <details><summary>मल्लिनाथः</summary>
 
-- वैवाहिकैरिति । अनुरागात्प्रीतिवशात् । गृहे गृहे प्रतिगृहम् । वीप्सायां द्विर्भावः । विवाहः प्रयोजनमेषामिति वैवाहिकानि तैः । 'प्रयोजनम्' इति ठक् । कौतुकसंविधानैर्मङ्गलार्थसंपादनैर्व्यग्रो व्याकुलः पुरन्ध्रिवर्गः कुटुम्बिनीसंघो यर्स्मिस्तत्तथोक्तं सानुमतोऽद्रेः पुरं बाह्यमोषधिप्रस्थमन्तःपुरमवरोधनं चैककुलेनैकगृहेण वोपमेयमासीत् 'सजातीयगणे गौत्रे गृहेऽपि कथितं कुलम्' । इति विश्वः । सर्वेषामपि स्वगृह एवेदं शोभनं वर्तत इत्यभिमानोऽभूदित्यर्थः । एतेन हिमार्दैः प्रजाराग उक्तः । अत्र सर्व संपन्नमेवेत्यर्थः ॥ 7.2 ॥
+वैवाहिकैरिति । अनुरागात्प्रीतिवशात् । गृहे गृहे प्रतिगृहम् । वीप्सायां द्विर्भावः । विवाहः प्रयोजनमेषामिति वैवाहिकानि तैः । 'प्रयोजनम्' इति ठक् । कौतुकसंविधानैर्मङ्गलार्थसंपादनैर्व्यग्रो व्याकुलः पुरन्ध्रिवर्गः कुटुम्बिनीसंघो यर्स्मिस्तत्तथोक्तं सानुमतोऽद्रेः पुरं बाह्यमोषधिप्रस्थमन्तःपुरमवरोधनं चैककुलेनैकगृहेण वोपमेयमासीत् 'सजातीयगणे गौत्रे गृहेऽपि कथितं कुलम्' । इति विश्वः । सर्वेषामपि स्वगृह एवेदं शोभनं वर्तत इत्यभिमानोऽभूदित्यर्थः । एतेन हिमार्दैः प्रजाराग उक्तः । अत्र सर्व संपन्नमेवेत्यर्थः ॥ 7.2 ॥
 </details>
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -292,7 +292,7 @@ title = "०७"
 
 <details><summary>मल्लिनाथः</summary>
 
-- तामिति । नार्यः प्रसाधिकास्तां तन्वीं पार्वती तत्र वेदिमध्ये प्राङ्नुखीं निवेश्योपवेश्य पुरोनिषण्णा अग्रे स्थिताः । प्रसाध्यतेऽनेनेति प्रसाधनेऽलंकारसाधनवर्गे संनिहितेऽपि भूतार्था सत्यरुपा । स्वाभाविकीति यावत् । या शोभा रामणीयकं तया ह्रियमाणान्याकृष्यमाणानि नेत्राणि यासां तास्तथोक्ताः क्षणं व्यलम्बन्त । स्वभावसुन्दर्याः किमस्याः प्रसाधनेनेति तूष्णीं तस्थुरित्यर्थः ॥ 7.13 ॥
+तामिति । नार्यः प्रसाधिकास्तां तन्वीं पार्वती तत्र वेदिमध्ये प्राङ्नुखीं निवेश्योपवेश्य पुरोनिषण्णा अग्रे स्थिताः । प्रसाध्यतेऽनेनेति प्रसाधनेऽलंकारसाधनवर्गे संनिहितेऽपि भूतार्था सत्यरुपा । स्वाभाविकीति यावत् । या शोभा रामणीयकं तया ह्रियमाणान्याकृष्यमाणानि नेत्राणि यासां तास्तथोक्ताः क्षणं व्यलम्बन्त । स्वभावसुन्दर्याः किमस्याः प्रसाधनेनेति तूष्णीं तस्थुरित्यर्थः ॥ 7.13 ॥
 </details>
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -939,7 +939,7 @@ title = "०७"
 
 <details><summary>मल्लिनाथः</summary>
 
-- तमिति । प्रथम आद्यो विधाता चतुर्मुखस्तथा श्रीवत्सलक्ष्मा श्रीवत्साङ्कः पुरुषो विष्णुश्च साक्षात्तं देवमभ्यगच्छत्संमुखमाययौ । किं कुर्वन्ती । जयेति वाचा जयशब्देनास्येश्वरस्य महिमानं महत्वं हविषा वह्नि मिव संवर्धयन्तौ वृद्धिं गमयन्तौ ॥ 7.43 ॥
+तमिति । प्रथम आद्यो विधाता चतुर्मुखस्तथा श्रीवत्सलक्ष्मा श्रीवत्साङ्कः पुरुषो विष्णुश्च साक्षात्तं देवमभ्यगच्छत्संमुखमाययौ । किं कुर्वन्ती । जयेति वाचा जयशब्देनास्येश्वरस्य महिमानं महत्वं हविषा वह्नि मिव संवर्धयन्तौ वृद्धिं गमयन्तौ ॥ 7.43 ॥
 </details>
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -1073,7 +1073,7 @@ title = "०७"
 
 <details><summary>मल्लिनाथः</summary>
 
-- ख इति । ख आकाशे खेलं सुन्दरं गच्छतीति खेलगामी । सशब्दाः शब्दायमानाश्चामीकरकिंकिण्यः काञ्चनक्षुद्रघण्टिका यस्य स तथोक्तः । 'किङ्किणी क्षुद्रधण्टिका' । इत्यमरः । 'नद्युतश्च' इति कप् । वाह्यतेऽनेनेति वाहो वृषभः । करणे घञ् । प्रोतधने स्यूतमेघे अत एव तटाभिघाताद्रोधोभेदाल्लग्नपङ्के श्लिष्टकर्दमे इव स्थिते विषाणे श्रृङ्गेमुहुर्धुन्वंस्तं हरमुवाह वहति स्म ॥ 7.49 ॥
+ख इति । ख आकाशे खेलं सुन्दरं गच्छतीति खेलगामी । सशब्दाः शब्दायमानाश्चामीकरकिंकिण्यः काञ्चनक्षुद्रघण्टिका यस्य स तथोक्तः । 'किङ्किणी क्षुद्रधण्टिका' । इत्यमरः । 'नद्युतश्च' इति कप् । वाह्यतेऽनेनेति वाहो वृषभः । करणे घञ् । प्रोतधने स्यूतमेघे अत एव तटाभिघाताद्रोधोभेदाल्लग्नपङ्के श्लिष्टकर्दमे इव स्थिते विषाणे श्रृङ्गेमुहुर्धुन्वंस्तं हरमुवाह वहति स्म ॥ 7.49 ॥
 </details>
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -1095,7 +1095,7 @@ title = "०७"
 
 <details><summary>मल्लिनाथः</summary>
 
-- स इति । स वाहोऽप्राप्तः पराभियोगः शत्रुसमाक्रान्तिर्यस्य तत्तथोक्तं नगेन्द्रेण हिमवता गुप्तं रक्षितं नगरमोषधिप्रस्थं पुरोऽग्रे विलग्नैः संक्रान्तैर्हरदृष्टिपातैः सुवर्णसूत्रैः कृष्यमाण इव मुहूर्तात्प्रापत् । अन्यथा कथं दूरस्याशुप्राप्तिः स्यादिति भावः । पुरः प्रसृता हरदृष्टयः पिङ्गलवर्णत्वात्सौवर्णानि वृषाकर्षणदामानीवालक्ष्यन्तेत्यर्थः ॥ 7.50 ॥
+स इति । स वाहोऽप्राप्तः पराभियोगः शत्रुसमाक्रान्तिर्यस्य तत्तथोक्तं नगेन्द्रेण हिमवता गुप्तं रक्षितं नगरमोषधिप्रस्थं पुरोऽग्रे विलग्नैः संक्रान्तैर्हरदृष्टिपातैः सुवर्णसूत्रैः कृष्यमाण इव मुहूर्तात्प्रापत् । अन्यथा कथं दूरस्याशुप्राप्तिः स्यादिति भावः । पुरः प्रसृता हरदृष्टयः पिङ्गलवर्णत्वात्सौवर्णानि वृषाकर्षणदामानीवालक्ष्यन्तेत्यर्थः ॥ 7.50 ॥
 </details>
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -1183,7 +1183,7 @@ title = "०७"
 
 <details><summary>मल्लिनाथः</summary>
 
-- ह्रिमानिति । भूमिधरो हिमवान् । त्रयो लोकास्त्रैलोक्यम् । चातुर्वर्ण्यादित्वात्ष्यञ्प्रत्ययः । तस्य वन्द्येन नमस्कार्येण कृतप्रणामः सन् । 'ऋत्विक्पितृव्यश्वशुरमातुलानां यवीयसाम् । प्रवयाः प्रथमं कुर्यात्प्रयुत्थायाभिवादनम् ॥' इति स्मरणात् । हीमानभूत् । महादेवं प्रति स्वयमल्पत्वात्संकोचं प्रापेत्यर्थः । ननु विदितेश्वरमाहिम्नः स्वयं प्रागेव प्रणतस्य जामातुराचारमात्रस्वीकारे कः संकोच इति शङ्कां निरस्यति-पूर्वमिति । हि यस्मात्स हिमवान्पूर्वं प्रागेव तस्येश्वरस्य महिम्ना सामर्थ्येन दूरमत्यन्तमावर्जितं नमितमात्मशिरो न विवेद । सत्यं स्वयं प्रणतत्वानुसंधानेन संकोचःतदनुसंधानं त्वौत्सुक्यान्नास्तीति भावः ॥ 7.54 ॥
+ह्रिमानिति । भूमिधरो हिमवान् । त्रयो लोकास्त्रैलोक्यम् । चातुर्वर्ण्यादित्वात्ष्यञ्प्रत्ययः । तस्य वन्द्येन नमस्कार्येण कृतप्रणामः सन् । 'ऋत्विक्पितृव्यश्वशुरमातुलानां यवीयसाम् । प्रवयाः प्रथमं कुर्यात्प्रयुत्थायाभिवादनम् ॥' इति स्मरणात् । हीमानभूत् । महादेवं प्रति स्वयमल्पत्वात्संकोचं प्रापेत्यर्थः । ननु विदितेश्वरमाहिम्नः स्वयं प्रागेव प्रणतस्य जामातुराचारमात्रस्वीकारे कः संकोच इति शङ्कां निरस्यति-पूर्वमिति । हि यस्मात्स हिमवान्पूर्वं प्रागेव तस्येश्वरस्य महिम्ना सामर्थ्येन दूरमत्यन्तमावर्जितं नमितमात्मशिरो न विवेद । सत्यं स्वयं प्रणतत्वानुसंधानेन संकोचःतदनुसंधानं त्वौत्सुक्यान्नास्तीति भावः ॥ 7.54 ॥
 </details>
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -1295,7 +1295,7 @@ title = "०७"
 
 <details><summary>मल्लिनाथः</summary>
 
-- विलोचनमिति । अपरा स्त्रो दक्षिणं विलोचनमञ्जनेन संभाव्यालंकृत्य तद्वञ्चितं तेनाञ्जनेन वञ्चितं वर्जितं वामनेत्रं यस्याः सा तथोक्ता सती । तथैव तेनैव रुपेण शलाकामञ्जनकूर्चिकां वहन्ती बिभ्रती वातायनसंनिकर्ष गवाक्षसमीपं ययौ । दक्षिणग्रहणं संभ्रमाद् व्युत्क्रमद्योतनार्थम् । 'सव्यं हि पूर्व मनुष्या अञ्जते' इति श्रुतेः ॥ 7.59 ॥
+विलोचनमिति । अपरा स्त्रो दक्षिणं विलोचनमञ्जनेन संभाव्यालंकृत्य तद्वञ्चितं तेनाञ्जनेन वञ्चितं वर्जितं वामनेत्रं यस्याः सा तथोक्ता सती । तथैव तेनैव रुपेण शलाकामञ्जनकूर्चिकां वहन्ती बिभ्रती वातायनसंनिकर्ष गवाक्षसमीपं ययौ । दक्षिणग्रहणं संभ्रमाद् व्युत्क्रमद्योतनार्थम् । 'सव्यं हि पूर्व मनुष्या अञ्जते' इति श्रुतेः ॥ 7.59 ॥
 </details>
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -1451,7 +1451,7 @@ title = "०७"
 
 <details><summary>मल्लिनाथः</summary>
 
-- परस्परेणेति । स्पृहणीयशोभं सर्वैराशास्यमानसौन्दर्यंमिदं द्वन्द्वं मिथुनम् । 'द्वन्द्वं रहस्ये-' ति निपातः । परस्परेण नायोजयिष्मद्यदि प्रजानां पत्युर्विधातुरस्मिन्द्वये द्वन्द्वे रुपविधाने सौन्दर्यनिर्माणे यत्नः प्रयासो विफलोऽभविष्यद्भवेत् । एतदनुरुपस्त्रीपुंसान्तराभावादिति भावः । 'लिङ्निमित्ते लृङक्रियातिपत्तौ' इति लृङ् ॥ 7.66 ॥
+परस्परेणेति । स्पृहणीयशोभं सर्वैराशास्यमानसौन्दर्यंमिदं द्वन्द्वं मिथुनम् । 'द्वन्द्वं रहस्ये-' ति निपातः । परस्परेण नायोजयिष्मद्यदि प्रजानां पत्युर्विधातुरस्मिन्द्वये द्वन्द्वे रुपविधाने सौन्दर्यनिर्माणे यत्नः प्रयासो विफलोऽभविष्यद्भवेत् । एतदनुरुपस्त्रीपुंसान्तराभावादिति भावः । 'लिङ्निमित्ते लृङक्रियातिपत्तौ' इति लृङ् ॥ 7.66 ॥
 </details>
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -1473,7 +1473,7 @@ title = "०७"
 
 <details><summary>मल्लिनाथः</summary>
 
-- नेति । आरुढरुषा प्ररुढकोपेनानेन हरेण कुसुमायुधस्य कामस्य शरीरं न दग्धं नूनं किन्तु कामोऽमुं देवमुदीक्ष्य दृष्ट्वा व्रीडात्सौन्दर्येणजितोऽस्मीति लज्जया स्वयमेव संन्यस्तदेहस्त्यक्तदेह इति मन्ये इत्युत्प्रेक्षा । न स्वयं न्यस्ताकृतेः कोपः संभवतीति भावः ॥ 7.67 ॥
+नेति । आरुढरुषा प्ररुढकोपेनानेन हरेण कुसुमायुधस्य कामस्य शरीरं न दग्धं नूनं किन्तु कामोऽमुं देवमुदीक्ष्य दृष्ट्वा व्रीडात्सौन्दर्येणजितोऽस्मीति लज्जया स्वयमेव संन्यस्तदेहस्त्यक्तदेह इति मन्ये इत्युत्प्रेक्षा । न स्वयं न्यस्ताकृतेः कोपः संभवतीति भावः ॥ 7.67 ॥
 </details>
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -1497,7 +1497,7 @@ title = "०७"
 
 <details><summary>मल्लिनाथः</summary>
 
-- अनेनेति । हे आलि सखि ! 'आलिः सखी वयस्या च' इत्यमरः । शैलराजो हिमवान् । दिष्ट्यैत्यानन्देऽव्ययम् । मनोरथैः प्रार्थितमवरुद्धम् । अभिलाषविषयीकृतमित्यर्थः । 'प्रार्थना याञ्चावरोधयोः' इत्यभिधानात् । अनेनेश्वरेण संबन्धमुपेत्यवाप्य क्षितिधारणेनोच्चमुन्नतं मूर्धानमुच्चैस्तरमुन्नततरम् । उच्चैरित्यव्ययात्तरप्प्रत्ययः । मूर्ध्नो द्रव्यत्वान्नामुप्रत्ययान्तो निपातः । 'किमेतिङव्ययघादाम्वद्रव्यप्रकर्षे' इत्यादिनाऽद्वव्यप्रकर्षे तस्य विधानादिति । वक्ष्यति धारयिष्यति । वहतेर्लृट् ॥ 7.68 ॥
+अनेनेति । हे आलि सखि ! 'आलिः सखी वयस्या च' इत्यमरः । शैलराजो हिमवान् । दिष्ट्यैत्यानन्देऽव्ययम् । मनोरथैः प्रार्थितमवरुद्धम् । अभिलाषविषयीकृतमित्यर्थः । 'प्रार्थना याञ्चावरोधयोः' इत्यभिधानात् । अनेनेश्वरेण संबन्धमुपेत्यवाप्य क्षितिधारणेनोच्चमुन्नतं मूर्धानमुच्चैस्तरमुन्नततरम् । उच्चैरित्यव्ययात्तरप्प्रत्ययः । मूर्ध्नो द्रव्यत्वान्नामुप्रत्ययान्तो निपातः । 'किमेतिङव्ययघादाम्वद्रव्यप्रकर्षे' इत्यादिनाऽद्वव्यप्रकर्षे तस्य विधानादिति । वक्ष्यति धारयिष्यति । वहतेर्लृट् ॥ 7.68 ॥
 </details>
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -1663,7 +1663,7 @@ contine to july
 
 <details><summary>मल्लिनाथः</summary>
 
-- तयोरिति । तयोर्वधूवरयोः समापत्तिषु यदृच्छया संगतिषु कातराणि चकितानि । 'अधीरे कातरः' इत्यमरः । द्रष्टुमसमर्थांनीति भावः । किंचिदीषद् व्यवस्थापितानि स्थिरीकृतानि पश्चात्संहृतानि निवर्तितानि चेति व्यवस्थापितसंहृतानि । 'पूर्वकाले-' त्यादिना तत्पुरुषः । अन्योन्यस्मिंल्लोलानि सतृष्णानि । 'लोलश्चलसतृष्णयोः' । इत्यमरः । विलोचनानि दृष्टयस्तत्क्षणं तस्मिन्क्षणे ह्नीयन्त्रणां ह्रिया निमित्तेन संकोचमन्वभूवन् ॥ 7.75 ॥
+तयोरिति । तयोर्वधूवरयोः समापत्तिषु यदृच्छया संगतिषु कातराणि चकितानि । 'अधीरे कातरः' इत्यमरः । द्रष्टुमसमर्थांनीति भावः । किंचिदीषद् व्यवस्थापितानि स्थिरीकृतानि पश्चात्संहृतानि निवर्तितानि चेति व्यवस्थापितसंहृतानि । 'पूर्वकाले-' त्यादिना तत्पुरुषः । अन्योन्यस्मिंल्लोलानि सतृष्णानि । 'लोलश्चलसतृष्णयोः' । इत्यमरः । विलोचनानि दृष्टयस्तत्क्षणं तस्मिन्क्षणे ह्नीयन्त्रणां ह्रिया निमित्तेन संकोचमन्वभूवन् ॥ 7.75 ॥
 </details>
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -1755,7 +1755,7 @@ contine to july
 
 <details><summary>मल्लिनाथः</summary>
 
-- प्रदक्षिणेति । तन्मिथुनमुदर्चिष उन्नतज्वालस्य कृशानोः कर्मणः प्रदक्षिणप्रक्रमणात्प्रदक्षिणीकरणाच्चकासे । किमिव । मेरोरुपान्तेषु परिसरेषु वर्तमानमावर्तमानम् । मेरुं प्रदक्षिणीकुर्वंनित्यर्थः । अन्योन्येन संसक्तं संगतम् मिथुनस्याप्येतद्विशेषणम् । अहश्च त्रियामा चाहस्त्रियामं रात्रिं दिवमिव । समाहरे द्वन्द्वैकवद्भावः ॥ 7.79 ॥
+प्रदक्षिणेति । तन्मिथुनमुदर्चिष उन्नतज्वालस्य कृशानोः कर्मणः प्रदक्षिणप्रक्रमणात्प्रदक्षिणीकरणाच्चकासे । किमिव । मेरोरुपान्तेषु परिसरेषु वर्तमानमावर्तमानम् । मेरुं प्रदक्षिणीकुर्वंनित्यर्थः । अन्योन्येन संसक्तं संगतम् मिथुनस्याप्येतद्विशेषणम् । अहश्च त्रियामा चाहस्त्रियामं रात्रिं दिवमिव । समाहरे द्वन्द्वैकवद्भावः ॥ 7.79 ॥
 </details>
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
