--- a/laxyam/padyam/kAlidAsaH/kumArasambhavam/sarva-prastutiH/08.md
+++ b/laxyam/padyam/kAlidAsaH/kumArasambhavam/sarva-prastutiH/08.md
@@ -792,7 +792,7 @@ title = "०८"
 
 <details><summary>मल्लिनाथः</summary>
 
-- दष्टेति । दष्टमर्धजग्ध तामरसकेसरं पद्मकिञ्जल्कम् । मुखद्वयेनैकमिति भावः । तत्त्यजत इति तथोक्तयोः क्रन्दतोः कूजतोर्विपरिवृत्तकण्ठयोः । परस्परालोकनार्थं वक्रीकृतग्रीवयोरित्यर्थः । निध्नयोर्दैवाधीनयोः । 'अधीनो निध्न अयत्त' इत्यमरः । चक्रवाकी च चक्रवाकश्च तयोः 'पुमान्स्त्रिया' इत्येकशेषः । सरस्यल्पमन्तरं व्यवधानमनल्पतामाधिक्यं गतम् । सरसि वियुज्यमानयोर्महद् व्यवधानमभूदित्यर्थः ॥ 8.32 ॥
+दष्टेति । दष्टमर्धजग्ध तामरसकेसरं पद्मकिञ्जल्कम् । मुखद्वयेनैकमिति भावः । तत्त्यजत इति तथोक्तयोः क्रन्दतोः कूजतोर्विपरिवृत्तकण्ठयोः । परस्परालोकनार्थं वक्रीकृतग्रीवयोरित्यर्थः । निध्नयोर्दैवाधीनयोः । 'अधीनो निध्न अयत्त' इत्यमरः । चक्रवाकी च चक्रवाकश्च तयोः 'पुमान्स्त्रिया' इत्येकशेषः । सरस्यल्पमन्तरं व्यवधानमनल्पतामाधिक्यं गतम् । सरसि वियुज्यमानयोर्महद् व्यवधानमभूदित्यर्थः ॥ 8.32 ॥
 </details>
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -958,7 +958,7 @@ title = "०८"
 
 <details><summary>मल्लिनाथः</summary>
 
-- बद्धकोशमिति । बद्धकोशमपि । मुकुलितमपीत्यर्थः । कुशेशयं कर्तृं । 'शतपत्रं कुशेशयम्' इत्यमरः । वसतिं ग्रहीष्यते । स्थितिं करिष्यत इत्यर्थः । 'लृटः सद्वा' इति शतृप्रत्ययः । षट्पदाय प्रीतिपूर्वमन्तरमवकाशं दातुमिव क्षणं सावशेषविवरं तिष्ठति ॥ 8.39 ॥
+बद्धकोशमिति । बद्धकोशमपि । मुकुलितमपीत्यर्थः । कुशेशयं कर्तृं । 'शतपत्रं कुशेशयम्' इत्यमरः । वसतिं ग्रहीष्यते । स्थितिं करिष्यत इत्यर्थः । 'लृटः सद्वा' इति शतृप्रत्ययः । षट्पदाय प्रीतिपूर्वमन्तरमवकाशं दातुमिव क्षणं सावशेषविवरं तिष्ठति ॥ 8.39 ॥
 </details>
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -1054,7 +1054,7 @@ title = "०८"
 
 <details><summary>मल्लिनाथः</summary>
 
-- खमिति । रवौ संस्थितेऽस्तमिते सति खं व्योम प्रसुप्तमिव निःप्रकाशत्वान्निद्रितमिव । स्थितमित्यर्थः । युज्यते चैतदित्याह । महतस्तेजस ईदृशी वक्ष्यमाणप्रकारा गतिः । स्वभाव इत्यर्थः । तां गतिमेवाहतदिति । तन्महत्तेज उत्थितं सद्यावत् । स्थानमिति शेषः । प्रकाशयति । तावतोधश्च्युतं सत् । तत्स्थानादिति शेषः । मीलनाय संकोचाय खलु भवति । यत्र स्थाने तेजस्तिष्ठति तत्प्रकाशत इति स्थितिः । यतो गच्छति न तत्प्रकाशते । अतः सूर्यापाये खं प्रसुप्तमिवेति युक्तोत्प्रेक्षेति भावः । अस्यार्थस्य तेजोमात्रसाधारण्येऽपि महति स्फुटमिति महद्ग्रहणं कृतम् ॥ 8.43 ॥
+खमिति । रवौ संस्थितेऽस्तमिते सति खं व्योम प्रसुप्तमिव निःप्रकाशत्वान्निद्रितमिव । स्थितमित्यर्थः । युज्यते चैतदित्याह । महतस्तेजस ईदृशी वक्ष्यमाणप्रकारा गतिः । स्वभाव इत्यर्थः । तां गतिमेवाहतदिति । तन्महत्तेज उत्थितं सद्यावत् । स्थानमिति शेषः । प्रकाशयति । तावतोधश्च्युतं सत् । तत्स्थानादिति शेषः । मीलनाय संकोचाय खलु भवति । यत्र स्थाने तेजस्तिष्ठति तत्प्रकाशत इति स्थितिः । यतो गच्छति न तत्प्रकाशते । अतः सूर्यापाये खं प्रसुप्तमिवेति युक्तोत्प्रेक्षेति भावः । अस्यार्थस्य तेजोमात्रसाधारण्येऽपि महति स्फुटमिति महद्ग्रहणं कृतम् ॥ 8.43 ॥
 </details>
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -1078,7 +1078,7 @@ title = "०८"
 
 <details><summary>मल्लिनाथः</summary>
 
-- संध्ययेति । संध्ययाप्यस्तशिखरेऽस्ताद्रिशृङ्गे समर्पितं निहितं वन्द्यं रवेर्वपुरनुगतमन्वगामि । अयंयुतं रविमन्वगादिति भावः । युक्तं चैतदित्याह-प्राक्पूर्वमुदये तथा तेन प्रकारेण पुरस्कृताग्रतः कृता । पूजिता चेति गम्यते । प्रातः सूर्योदयात्प्रागेव संध्यागम इति हि प्रसिद्धम् । इयं संध्या तं रविमापद्यस्तसमये कथं नानुयास्यति । अनुयास्यत्येवेत्यर्थः संपदसंपदोस्तुल्यरुपमेव साधूनामिति भावः ॥ 8.44 ॥
+संध्ययेति । संध्ययाप्यस्तशिखरेऽस्ताद्रिशृङ्गे समर्पितं निहितं वन्द्यं रवेर्वपुरनुगतमन्वगामि । अयंयुतं रविमन्वगादिति भावः । युक्तं चैतदित्याह-प्राक्पूर्वमुदये तथा तेन प्रकारेण पुरस्कृताग्रतः कृता । पूजिता चेति गम्यते । प्रातः सूर्योदयात्प्रागेव संध्यागम इति हि प्रसिद्धम् । इयं संध्या तं रविमापद्यस्तसमये कथं नानुयास्यति । अनुयास्यत्येवेत्यर्थः संपदसंपदोस्तुल्यरुपमेव साधूनामिति भावः ॥ 8.44 ॥
 </details>
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -1150,7 +1150,7 @@ title = "०८"
 
 <details><summary>मल्लिनाथः</summary>
 
-- पार्ष्णीति । पार्ष्णयो गृल्फाधोभागास्तैर्मुक्तवसुधास्त्यक्तभूतलाः । पादाग्रस्थिता इत्यर्थः । 'गोशृङ्गमात्रमुद्धृत्य मुक्तपार्ष्णः क्षिपेज्जलम्' । इति स्मरणात् । पावनैरम्बुभी रचिताऽञ्जलिक्रियाः । विहितार्ध्यप्रक्षेपा इत्यर्थः । विधिविदः । शास्त्रज्ञा इत्यर्थः । कर्तरि क्तः । अभिसंध्य संध्यामभि । 'लक्षणेनाभिप्रतीं आभिमुख्ये' इत्यव्ययीभावः । शुद्ध्यर्थ ब्रह्म गायत्रीं गूढमुपांशु गृणन्ति । 'प्रत्यगा तारकोदयात्' इति स्मरणात् ॥ 8.47 ॥
+पार्ष्णीति । पार्ष्णयो गृल्फाधोभागास्तैर्मुक्तवसुधास्त्यक्तभूतलाः । पादाग्रस्थिता इत्यर्थः । 'गोशृङ्गमात्रमुद्धृत्य मुक्तपार्ष्णः क्षिपेज्जलम्' । इति स्मरणात् । पावनैरम्बुभी रचिताऽञ्जलिक्रियाः । विहितार्ध्यप्रक्षेपा इत्यर्थः । विधिविदः । शास्त्रज्ञा इत्यर्थः । कर्तरि क्तः । अभिसंध्य संध्यामभि । 'लक्षणेनाभिप्रतीं आभिमुख्ये' इत्यव्ययीभावः । शुद्ध्यर्थ ब्रह्म गायत्रीं गूढमुपांशु गृणन्ति । 'प्रत्यगा तारकोदयात्' इति स्मरणात् ॥ 8.47 ॥
 </details>
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -1196,7 +1196,7 @@ title = "०८"
 
 <details><summary>मल्लिनाथः</summary>
 
-- निर्वभुज्येति । ततो भर्तुर्वाचि वचनेऽवधीरणापरा तिरस्कारतत्परा शैलराजतनया पार्वती । छाद्यतेऽनेनेति छदः 'पुंसि संज्ञायां धः प्रायेण' इति धप्रत्ययः । दशनच्छदं निर्वभुज्य कुटिलीकृत्य समीपगां विजयां विजयाख्यां सखीमहेतुकं निर्निमित्तमाललाप । न तु रोषाद्भर्त्तुरुत्तरं ददावित्यर्थः ॥ 8.49 ॥
+निर्वभुज्येति । ततो भर्तुर्वाचि वचनेऽवधीरणापरा तिरस्कारतत्परा शैलराजतनया पार्वती । छाद्यतेऽनेनेति छदः 'पुंसि संज्ञायां धः प्रायेण' इति धप्रत्ययः । दशनच्छदं निर्वभुज्य कुटिलीकृत्य समीपगां विजयां विजयाख्यां सखीमहेतुकं निर्निमित्तमाललाप । न तु रोषाद्भर्त्तुरुत्तरं ददावित्यर्थः ॥ 8.49 ॥
 </details>
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -1220,7 +1220,7 @@ title = "०८"
 
 <details><summary>मल्लिनाथः</summary>
 
-- ईश्वर इति । ईश्वरोऽपि दिवसात्ययोचितं सायंकालोचितं विधिं संध्यावन्दनकृत्यं मन्त्रपूर्वमनुतस्थिवाननुष्ठितवान् । तिष्ठतेः क्वसुप्रत्ययः । असूययां संध्यावन्दनजनितासूययाऽवचनामभाषमाणां पार्वतीं पुनः प्रत्युपेत्य सस्मितमाह ॥ 8.50 ॥
+ईश्वर इति । ईश्वरोऽपि दिवसात्ययोचितं सायंकालोचितं विधिं संध्यावन्दनकृत्यं मन्त्रपूर्वमनुतस्थिवाननुष्ठितवान् । तिष्ठतेः क्वसुप्रत्ययः । असूययां संध्यावन्दनजनितासूययाऽवचनामभाषमाणां पार्वतीं पुनः प्रत्युपेत्य सस्मितमाह ॥ 8.50 ॥
 </details>
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -1448,7 +1448,7 @@ title = "०८"
 
 <details><summary>मल्लिनाथः</summary>
 
-- रुद्धेति । दिक्पर्वदिक् । नायिका ध्वन्यते । आ दिनक्षयादा सायं रुद्धं निर्गमनं निःसरणं यस्य तत्तथोक्तम् । अन्यत्र बहिरप्रकाशितमित्यर्थः । तनुचन्द्रिकास्मितमिव तनुचन्द्रिकास्मितं पूर्वदृष्टं यस्मात्तत्तथोक्तम् । एतच्चन्द्रमण्डलं नर्मरहस्यं गोप्यार्थमिव रात्रिचोदिता । रात्र्या सख्येव प्रेरिता सतीत्यर्थः उद्गिरति प्रकाशयति । यथा काचिदासायं मनस्विनी गूहितमभिलाषं प्रदोषे सख्या मह्यं ब्रूहीति निर्बन्धात्पृष्टा सती प्रकटयति तद्वदित्यर्थः ॥ 8.60 ॥
+रुद्धेति । दिक्पर्वदिक् । नायिका ध्वन्यते । आ दिनक्षयादा सायं रुद्धं निर्गमनं निःसरणं यस्य तत्तथोक्तम् । अन्यत्र बहिरप्रकाशितमित्यर्थः । तनुचन्द्रिकास्मितमिव तनुचन्द्रिकास्मितं पूर्वदृष्टं यस्मात्तत्तथोक्तम् । एतच्चन्द्रमण्डलं नर्मरहस्यं गोप्यार्थमिव रात्रिचोदिता । रात्र्या सख्येव प्रेरिता सतीत्यर्थः उद्गिरति प्रकाशयति । यथा काचिदासायं मनस्विनी गूहितमभिलाषं प्रदोषे सख्या मह्यं ब्रूहीति निर्बन्धात्पृष्टा सती प्रकटयति तद्वदित्यर्थः ॥ 8.60 ॥
 </details>
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -1692,7 +1692,7 @@ title = "०८"
 
 <details><summary>मल्लिनाथः</summary>
 
-- पश्येति । शुद्धया ज्योत्स्नया जनितो रुपसंशयः अंशुकं ज्योत्स्नावेति स्वरुपसंदेहो यस्य तत्तथोक्तं कल्पतरुलम्ब्यंशुकं । हे चण्डि अत्यन्तकोपने ! गौरादित्वान्ङीष् । देवलं मारुते चलति सति विपरिवृत्तं चलं सद् व्यज्यते पश्य । ज्योत्स्नासच्छायत्वान्न रुपतो विविच्यते परंतु क्रिययेत्यर्थः ॥ 8.71 ॥
+पश्येति । शुद्धया ज्योत्स्नया जनितो रुपसंशयः अंशुकं ज्योत्स्नावेति स्वरुपसंदेहो यस्य तत्तथोक्तं कल्पतरुलम्ब्यंशुकं । हे चण्डि अत्यन्तकोपने ! गौरादित्वान्ङीष् । देवलं मारुते चलति सति विपरिवृत्तं चलं सद् व्यज्यते पश्य । ज्योत्स्नासच्छायत्वान्न रुपतो विविच्यते परंतु क्रिययेत्यर्थः ॥ 8.71 ॥
 </details>
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -1764,7 +1764,7 @@ title = "०८"
 
 <details><summary>मल्लिनाथः</summary>
 
-- पाकेति । हे चन्द्रबिम्बनिहिताक्षि हे चन्द्रविनिहितेक्षणे । पाकभिन्नः पाकविकसितो यः शरकाण्डस्तद्वद्गौरयोः सितयोः । 'अवदातः सितौ गौरः' इत्यमरः । उल्लसन् प्रकृतिकजः प्रसादः स्वभावजः प्रसादः (प्रसन्नता) ययोरतयोः सपदि रोहतीव आरोहणं करोतीबेत्युत्प्रेक्षा । प्रोज्जवलायोस्तव गण्डलेखयोश्चन्द्रिका रोहतीव । गण्जस्थलप्रतिबिम्बसंक्रमणमूर्छिता चन्द्रिका तयोरेव प्ररुढेति प्रतीयत इत्यर्थः ॥ 8.74 ॥
+पाकेति । हे चन्द्रबिम्बनिहिताक्षि हे चन्द्रविनिहितेक्षणे । पाकभिन्नः पाकविकसितो यः शरकाण्डस्तद्वद्गौरयोः सितयोः । 'अवदातः सितौ गौरः' इत्यमरः । उल्लसन् प्रकृतिकजः प्रसादः स्वभावजः प्रसादः (प्रसन्नता) ययोरतयोः सपदि रोहतीव आरोहणं करोतीबेत्युत्प्रेक्षा । प्रोज्जवलायोस्तव गण्डलेखयोश्चन्द्रिका रोहतीव । गण्जस्थलप्रतिबिम्बसंक्रमणमूर्छिता चन्द्रिका तयोरेव प्ररुढेति प्रतीयत इत्यर्थः ॥ 8.74 ॥
 </details>
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -1858,7 +1858,7 @@ title = "०८"
 
 <details><summary>मल्लिनाथः</summary>
 
-- पार्वतीति । पार्वती = कर्त्री । तदुपयोगसंभवां मद्यपानजन्यां विक्रियामिपि सतां मनोहराम् आभ्रताम्रत्वमप्रतर्क्यो दुर्ज्ञेयो यो विधियोगोऽनुष्ठानयोगस्तेन निर्मितां सहकारतामतिसौरभत्वमिव ययौ = प्रापेत्यर्थः । 'आम्रश्चूतो रसालोसौ सहकारोऽतिसौरभः' इत्यमरः । आम्रमेवाऽनुष्ठानविशेषेण यथा सहकारो भवति तद्वद्विक्रियाऽपि मनोहराऽभूदिति भावः ॥ 8.78 ॥
+पार्वतीति । पार्वती = कर्त्री । तदुपयोगसंभवां मद्यपानजन्यां विक्रियामिपि सतां मनोहराम् आभ्रताम्रत्वमप्रतर्क्यो दुर्ज्ञेयो यो विधियोगोऽनुष्ठानयोगस्तेन निर्मितां सहकारतामतिसौरभत्वमिव ययौ = प्रापेत्यर्थः । 'आम्रश्चूतो रसालोसौ सहकारोऽतिसौरभः' इत्यमरः । आम्रमेवाऽनुष्ठानविशेषेण यथा सहकारो भवति तद्वद्विक्रियाऽपि मनोहराऽभूदिति भावः ॥ 8.78 ॥
 </details>
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
